--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -202,6 +202,61 @@ def rand10():
 
 
 
+### 丑数Ⅱ
+
+[264. 丑数 II - 力扣（LeetCode）](https://leetcode.cn/problems/ugly-number-ii/description/)
+
+
+丑数指质因子只包含2、3和5的正整数，求出第 n 个质因子
+
+第一种方法可以使用最小堆+哈希表（去重），每次弹出最小值，乘上 2、3和 5再塞回去。
+
+```python
+def nthUglyNumber(n: int) -> int:
+	hashset = set()
+	minheap = []
+	if n == 1: return 1
+
+	heapq.heappush(minheap, 1)
+	hashset.add(1)
+
+	i = n - 1
+
+	while i > 0 :
+		m = heapq.heappop(minheap)
+		i -= 1
+		for num in [2, 3, 5]:
+			if m * num not in hashset:
+				heapq.heappush(minheap, m * num)
+				hashset.add(m * num)
+   
+	return heapq.heappop(minheap)
+```
+
+
+另一种方法是动态规划，令 `dp[i]` 为第 i 个丑数，为了构造第 i 个丑数，需要有三个指针 `p2`，`p3` 和 `p5`，表示下一个丑数是当前指针指向的丑数乘以对应的质因数。初始时，三个指针都是1。当 `2 ≤ i ≤ n` 时，令 `dp[i]=min(dp[p2] * 2, dp[p3] * 3, dp[p5] * 5)`，如果 `dp[i]` 等于 `dp[p2] * 2`，就增加 `p2`，同理 `p3` 和 `p5` 也是如此
+
+```python
+def nthUglyNumber(n: int) -> int:
+	dp = [0] * (n+1)
+	dp[1] = 1
+	p2, p3, p5 = 1, 1, 1
+
+	for i in range(2, n+1):
+		num2, num3, num5 = dp[p2] * 2, dp[p3] * 3, dp[p5] * 5
+		dp[i] = min(num2, num3, num5)
+
+		if dp[i] == num2:
+			p2 += 1
+		if dp[i] == num3:
+			p3 += 1
+		if dp[i] == num5:
+			p5 += 1
+	return dp[n]
+```
+
+
+
 ## 进制问题
 
 ### 小鼠和毒药问题
@@ -1051,6 +1106,51 @@ def findDuplicate(nums: List[int]) -> int:
 	return fast
 ```
 
+
+### 递增三元子序列
+
+[334. 递增的三元子序列 - 力扣（LeetCode）](https://leetcode.cn/problems/increasing-triplet-subsequence/)
+
+该问题可以通过先求出前一个较小值和后一个较大值来解决，但是还有一种更简单的方法（贪心算法）
+
+维护两个值 `f`，`s`，分别代表三元子序列的第一项和第二项，初始时 `f=nums[0]`，`s=inf`。从 1 开始遍历数组，如果遇到值大于 `s`，证明找到了递增三元子序列，如果值大于 `f`，则 `s` 等于这个值，否则 `f` 等于这个值
+
+```python
+def increasingTriplet(nums) -> bool:
+	f, s = nums[0], float("inf")
+	n = len(nums)
+	for num in nums:
+		if num > s:
+			return True
+		if num > f:
+			s = num
+		else:
+			f = num
+	return False
+```
+
+
+### 原位删除有序数组中的重复项
+
+[80. 删除有序数组中的重复项 II - 力扣（LeetCode）](https://leetcode.cn/problems/remove-duplicates-from-sorted-array-ii/description/)
+
+原题最多保留2个重复项，下面给出一个泛化的版本：最多保留 k 个重复项
+
+- 由于是保留 `k` 个相同数字，对于前 `k` 个数字，我们可以直接保留
+- 对于后面的任意数字，能够保留的前提是：与当前写入的位置前面的第 `k` 个元素进行比较，不相同则保留
+
+```python
+def removeDuplicates(nums: List[int], k) -> int:
+	n = len(nums)
+	idx = 0
+	
+	for i in range(n):
+		if i < k or nums[idx - k] != nums[i]:
+			nums[idx] = nums[i]
+			idx += 1
+	
+	return idx
+```
 
 
 ## 哈希问题
@@ -1965,6 +2065,31 @@ def kthSmallest(arr, l, r, k):
 
 	# 否则在右边寻找，注意 k 要减去左边元素的数量
 	return kthSmallest(arr, index + 1, r, k)
+```
+
+
+### H 指数Ⅱ
+
+[275. H 指数 II - 力扣（LeetCode）](https://leetcode.cn/problems/h-index-ii/description/)
+
+给定一个升序排列的整数数组，找到一个 n 使得 n 个数字大于等于 n，使用二分查找解决这个问题
+
+
+```python
+def hIndex(citations) -> int:
+	n = len(citations)
+	left, right = 0, n-1
+
+	ans = 0
+	while left <= right:
+		mid = left + (right - left) // 2
+
+		if citations[mid] >= n - mid:
+			right = mid - 1
+			ans = n - mid
+		else:
+			left = mid + 1
+	return ans
 ```
 
 ### 在旋转后的排序数组中搜索
@@ -4008,6 +4133,8 @@ def areIsomorphic(self,s1,s2):
 
 [Check if a String is Interleaving of Other Two - GeeksforGeeks](https://www.geeksforgeeks.org/find-if-a-string-is-interleaved-of-two-other-strings-dp-33/)
 
+[97. 交错字符串 - 力扣（LeetCode）](https://leetcode.cn/problems/interleaving-string/)
+
 给定三个字符串，判断第三个字符串是否是另外两个字符串的插值。
 
 #### 回溯法
@@ -4015,30 +4142,80 @@ def areIsomorphic(self,s1,s2):
 用 `i` 和 `j` 分别索引前两个字符串，然后 `i + j` 索引第三个字符串
 
 ```python
-def interleave(s1, s2, s3, i, j):
+def isInterleave(s1: str, s2: str, s3: str) -> bool:
+	n1 = len(s1)
+	n2 = len(s2)
+	n3 = len(s3)
+	if n1 + n2 != n3: return False
 
-    if i == len(s1) and j == len(s2) and i + j == len(s3):
-        return True
-    
-    # 如果 s3[i+j] 为 s1 的第i个元素，继续匹配 s1 的下一个元素
-    a = i < len(s1) and s3[i+j] == s1[i] and interleave(s1, s2, s3, i+1, j)
-    # 或者匹配 s2 的下一个元素
-    b = j < len(s2) and s3[i+j] == s2[j] and interleave(s1, s2, s3, i, j+1)
-    return a or b
+	def dfs(i, j):
+		if i == n1 and j == n2:
+			return True
+		if memo[i][j] is not None:
+			return memo[i][j]
 
-def solve(s1, s2, s3):
-    if len(s1) + len(s2) != len(s3):
-        print(False)
-        return
-    res = interleave(s1, s2, s3, 0, 0)
-    print(res)
+		a = i < n1 and s3[i+j] == s1[i] and dfs(i+1, j)
+		b = j < n2 and s3[i+j] == s2[j] and dfs(i, j+1)
+
+		memo[i][j] = a or b
+		return memo[i][j]
+	
+	memo = [[None for _ in range(n2+1)] for _ in range(n1+1)]
+
+	res = dfs(0, 0)
+	return res
 ```
 
 
 #### 动态规划
 
-。。。
+令 `dp[i][j]` 为 `s1[:i]` 和 `s2[:j]` 是否为 `s3[:i+j]` 的插值
 
+边界条件：`dp[0][0]` 为True
+
+分成两个条件：如果 `s1[i-1]` 和 `s3[i+j-1]` 相等，则 `dp[i][j] |= dp[i-1][j]`
+
+如果 `s2[j-1]` 和 `s3[i+j-1]` 相等，则 `dp[i][j] |= dp[i][j-1]`
+
+```python
+def isInterleave(s1: str, s2: str, s3: str):
+	n1 = len(s1)
+	n2 = len(s2)
+	n3 = len(s3)
+	if n1 + n2 != n3: return False
+
+	dp = [[False for _ in range(n2+1)] for _ in range(n1+1)]
+	dp[0][0] = True
+	for i in range(n1+1):
+		for j in range(n2+1):
+			if i > 0 and s1[i-1] == s3[i+j-1]:
+				dp[i][j] |= dp[i-1][j]
+			if j > 0 and s2[j-1] == s3[i+j-1]:
+				dp[i][j] |= dp[i][j-1]
+	
+	return dp[n1][n2]
+```
+
+为了节省空间，可以采用一维数组实现
+
+```python
+def isInterleave(s1: str, s2: str, s3: str) -> bool:
+	n1 = len(s1)
+	n2 = len(s2)
+	n3 = len(s3)
+	if n1 + n2 != n3: return False
+
+	dp = [False for _ in range(n2+1)]
+	dp[0] = True
+	for i in range(n1+1):
+		for j in range(n2+1):
+			if i > 0:
+				dp[j] &= (s1[i-1] == s3[i+j-1])
+			if j > 0 and s2[j-1] == s3[i+j-1]:
+				dp[j] |= dp[j-1]
+	
+	return dp[n2]
+```
 
 
 ### 获取字符串所有的置换结果
@@ -4391,6 +4568,36 @@ def allPalindromicPerms(s):
 ### 判断一个字符串是否是scramble
 
 [Check if a string is a scrambled form of another string - GeeksforGeeks](https://www.geeksforgeeks.org/check-if-a-string-is-a-scrambled-form-of-another-string/)
+
+[87. 扰乱字符串 - 力扣（LeetCode）](https://leetcode.cn/problems/scramble-string/description/)
+
+
+```python
+def isScramble(s1: str, s2: str):
+	n = len(s1)
+
+	# dp[i][j][l]: s1[i:i+l] 和 s2[j:j+l] 是否为scramble
+	dp = [[[False for _ in range(n+1)] for _ in range(n)] for _ in range(n)]
+
+	# 先初始化长度为1时的情况
+	for i in range(n):
+		for j in range(n):
+			dp[i][j][1] = s1[i] == s2[j]
+
+	# 遍历长度从 2 到 n
+	for l in range(2, n+1):
+		for i in range(n-l+1):
+			for j in range(n-l+1):
+				for k in range(1, l):  # 将 [i: i+l] 分割为两部分
+					# 不交换
+					noswap = dp[i][j][k] and dp[i+k][j+k][l-k]
+					# 交换
+					swap = dp[i][j+l-k][k] and dp[i+k][j][l-k]
+					if swap or noswap:
+						dp[i][j][l] = True
+						break
+	return dp[0][0][n]
+```
 
 
 ### 合法的IP地址
@@ -5533,19 +5740,7 @@ def bottomView(root):
 
 [Print all subsets of a given Set or Array - GeeksforGeeks](https://www.geeksforgeeks.org/backtracking-to-find-all-subsets/)
 
-解法1：从后向前，每次去除数组中的一个元素
-
-```python
-def get_all_subsets(arr, n, subs: list):
-    
-    if n == 0:
-        subs.append(arr)
-        return
-    get_all_subsets(arr[:n-1] + arr[n:], n-1, subs)
-    get_all_subsets(arr, n-1, subs)
-```
-
-解法2：从前到后，每次向结果中添加一个元素
+每次向结果中添加一个元素
 
 ```python
 def get_all_subsets2(arr, l, idx, subs):
@@ -5560,28 +5755,47 @@ def get_all_subsets2(arr, l, idx, subs):
     get_all_subsets2(arr, l, idx + 1, subs)
 ```
 
-解法3：使用比特位来控制
+使用比特位来控制
 
 假设数组中有n个元素，那么子集合共有 $2^n$ 个，可以使用比特来表示，如共有3个元素，则可以用 0- 7这8个数字表示，0 表示三个位置都为0，即空集，7 三个位置都是1，即全集。
 
 ```python
 for i in range(1 << len(arr)):
-	# Creating a list to store the current subset.
 	cur = []
 
-	# Iterating over each element of the array.
+	# 遍历每个元素
 	for j in range(len(arr)):
-		# Checking if the jth bit of i is set.
 		if i & (1 << j):
-			# If yes, then include that element in the subset.
 			cur.append(arr[j])
-
-	# Adding the current subset to the result list.
 	ans.append(cur)
 
-# Sorting the subsets in lexicographical order.
 ans.sort()
 ```
+
+
+如果数组中存在重复元素，为了找到不重复的子集合，需要在不选择当前位置时同时不选择和其相等的所有值（需要先排序）
+
+```python
+def subsetsWithDup(nums) -> List[List[int]]:
+	nums.sort()
+	sols = []
+	n = len(nums)
+	def dfs(i, res):
+		if i == n:
+			sols.append(res[:])
+			return
+		dfs(i+1, res+[nums[i]])   # 选择当前位置的话，一切正常
+
+		# 不选择 i+1，则跳过所有和 i+1 相等的值
+		i += 1
+		while i < n and nums[i] == nums[i-1]:
+			i += 1
+		dfs(i, res)
+	
+	dfs(0, [])
+	return sols
+```
+
 
 ### 拆分数组
 
@@ -8744,6 +8958,35 @@ def solve(postr, inr):
 
 直接构建二叉树见 [105. 从前序与中序遍历序列构造二叉树 - 力扣（LeetCode）](https://leetcode.cn/problems/construct-binary-tree-from-preorder-and-inorder-traversal/description/)
 
+```python
+def buildTree(preorder: List[int], inorder: List[int]):
+	inorder_pos = {}
+	for i in range(len(inorder)):  # 先保存位置
+		inorder_pos[inorder[i]] = i
+
+	pre_idx = [0]   # 根节点的位置
+
+	def build(left, right):
+		if left > right:
+			return None
+
+		root_val = preorder[pre_idx[0]]
+		root_idx = inorder_pos[root_val]
+
+		pre_idx[0] += 1
+
+		root = TreeNode(root_val)
+		root.left = build(left, root_idx-1)    # 注意需要先构造左子树
+		root.right = build(root_idx+1, right)
+		
+		return root
+		
+	root = build(0, len(inorder) - 1)
+	return root
+```
+
+同理，如果是后序遍历的结果，则根节点一开始位于最右侧，并且需要先构造右子树
+
 
 ### 二叉树展开为链表
 
@@ -9736,6 +9979,19 @@ def getPermutation(n: int, k: int) -> str:
 	res.extend(wait_for_choose)
 	return "".join(res)
 ```
+
+
+### 回文对
+
+[336. 回文对 - 力扣（LeetCode）](https://leetcode.cn/problems/palindrome-pairs/)
+
+给定一组字符串，求出一对字符串使其连接的结果为回文串
+
+暴力解法会超时，可以尝试使用字典树来降低查找的时间。字典树每个节点保存了
+
+[336. 回文对 - 力扣（LeetCode）](https://leetcode.cn/problems/palindrome-pairs/solutions/2347656/you-yu-suo-you-ti-jie-yi-ti-san-jie-qian-2sur/)
+
+[336. 回文对 - 力扣（LeetCode）](https://leetcode.cn/problems/palindrome-pairs/solutions/45018/java-trie-yi-yu-li-jie-by-copyreadmachine/)
 
 
 ## 堆
