--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -189,9 +189,6 @@ def primePalindrome(n: int) -> int:
 
 ```python
 def rand10():
-	"""
-	:rtype: int
-	"""
 	while True:
 		a = rand7()
 		b = rand7()
@@ -256,8 +253,33 @@ def nthUglyNumber(n: int) -> int:
 ```
 
 
+### 数字 1 的个数
 
-## 进制问题
+[233. 数字 1 的个数 - 力扣（LeetCode）](https://leetcode.cn/problems/number-of-digit-one/)
+
+枚举每一位上 1 的个数。如对于 `n=1234567`，需要统计百位数字 1 出现的次数。对于从 0 开始每 1000 个数，百位上的数字 1 都会出现 100 次，n 包含了 1234 个这样的循环，每个循环都会出现 100 次 1，因此这部分出现的 1 的次数为 $\left\lfloor {{n \over {1000}}} \right\rfloor  \times 100$，对于剩余的部分 `n'=n mod 1000` 即 `[000, 567]` 这个部分，有如下结论
+
+如果 `n'<100`，百分位上不会有1；`100≤n'<200`时，百分位上会出现 `n'-100+1` 次 1；否则会出现 100 次 1。可以表示为 `min(max(n'-100+1, 0), 100)`
+
+假设求第k位上的 1 的次数，则可以表示为（百位 k=2）
+
+$$
+\left\lfloor {{n \over {{{10}^{k + 1}}}}} \right\rfloor  \times {10^k} + \min \left( {\max \left( {n\;\bmod \;{{10}^{k + 1}} - 10^k + 1}, 0 \right),10^k} \right)
+$$
+
+```python
+def countDigitOne(n: int) -> int:
+	k = 0
+	k10 = 10 ** k   # 10^k
+	ans = 0
+	while n >= k10:
+		ans += (n // (k10 * 10)) * k10 + min(max(n % (k10 * 10) - k10 + 1, 0), k10)
+		k10 *= 10
+	return ans
+```
+
+
+## 其它
 
 ### 小鼠和毒药问题
 
@@ -303,21 +325,18 @@ def nthUglyNumber(n: int) -> int:
 
 
 
-## 查找表
+### 计算整数的二进制中1的个数
+
+如 9 的二进制为 1001， 1的个数为2，可以使用查找表解决这一问题
 
 查找表是一个数组，一般事先计算好查找表，在后续使用时直接在查找表中索引即可，可以加速运算。
 
 如计算DFT时，事先将旋转因子$W_N^{kn}$计算好，对于长度为 N 的DFT，查找表需要存储 N 个复数（$W_N^0$，$W_N^1$，...，$W_N^{N-1}$）
 
 
-### 计算整数的二进制中1的个数
-
-如 9 的二进制为 1001， 1的个数为2
-
-简单的算法如下：
 
 ```python
-def  countSetBits(n):
+def countSetBits(n):
     count = 0
     while (n):
         count += n & 1
@@ -348,6 +367,25 @@ def countSetBits(n):
 			BitsSetTable256[(n >> 8) & 0xff] +
 			BitsSetTable256[(n >> 16) & 0xff] +
 			BitsSetTable256[n >> 24])
+```
+
+
+### Nim 游戏
+
+[292. Nim 游戏 - 力扣（LeetCode）](https://leetcode.cn/problems/nim-game/description/)
+
+- 桌子上有一堆石头。
+- 你们轮流进行自己的回合， **你作为先手** 。
+- 每一回合，轮到的人拿掉 1 - 3 块石头。
+- 拿掉最后一块石头的人就是获胜者。
+
+假设你们每一步都是最优解。请编写一个函数，来判断你是否可以在给定石头数量为 `n` 的情况下赢得游戏。如果可以赢，返回 `true`；否则，返回 `false` 。
+
+这个问题可以这样思考如果 n 为 4，那么肯定是赢不了的，因为最后都会剩下来1-3个。所以如果 n 为 4 的倍数的话，那么就会只要你先手，对方可以将n始终维持在 4 的倍数，这样对方肯定能赢。如果不是 4 的倍数，那么只要你先手将其变成 4 的倍数，然后问题就转为对方先手，n 为 4 的倍数了。
+
+```python
+def canWinNim(n: int):
+    return n % 4 != 0
 ```
 
 
@@ -577,7 +615,7 @@ def topKFrequent(arr, k):
 
 使用堆实现，主要思路是维持两个堆，一个堆存储较小值，另一个堆存储较大值
 
-注意 python 中只给出了最小堆的实现，最大堆可以通过每次传入数据时加上负号实现。
+注意 python 官方只实现了最小堆，最大堆可以通过每次传入数据时加上负号实现。
 
 ```python
 import heapq
@@ -953,7 +991,7 @@ def solve(arr):
     return maxArea
 ```
 
-这里在找到前一个较小值时，可以同时找到后一个较小值
+前一个较小值时和后一个较小值可以同时找到
 
 ```python
 st = []
@@ -973,7 +1011,7 @@ for i in range(n):
 找到下一个字典序的排序
 
 
-基本思路是从后向前，找到第一个降序排序的元素 x，然后再从最后向后向前找到第一个比 x 大的元素 y，交换 x 和 y 之后，此时原本 x 对应的位置之后的元素均为降序排序，需要将其转为升序排序（用两个指针交换前后元素即可）
+基本思路是从后向前，找到第一个降序排序的元素 x，然后再从最后向前找到第一个比 x 大的元素 y，交换 x 和 y 之后，此时原本 x 对应的位置之后的元素均为降序排序，需要将其转为升序排序（用两个指针交换前后元素即可）
 
 ```python
 def nextPermutation(nums: List[int]) -> None:
@@ -1477,6 +1515,7 @@ $$
   & a = n*b + k  \cr 
   & a - k = n*b \cr} 
 $$
+
 因此只需要找到 a-k 的因子即可，因子分解的算法如下
 
 ```python
@@ -1900,7 +1939,7 @@ def ValidCorner(matrix):
 				if matrix[i][j] != 1 or matrix[i][k] != 1:
 					continue
 				# 如果当前行的 j 列和 k 列元素均为1
-				# 则考虑历史行中是否存在 j 列和 k 列元素均为0
+				# 则考虑历史行中是否存在 j 列和 k 列元素为1
 				if j in table and k in table[j]:
 					return True
 				if k in table and j in table[k]:
@@ -1961,14 +2000,14 @@ def binarySearch(arr, low, high, x):
 ```
 
 >如果是一个无限的有序数组，可以采用自定义边界的方法，如
->第一轮搜索 [0, 1]
->第二轮搜索 [1, 2]
->第三轮搜索 [2, 4]
->第四轮搜索 [4, 8]
+>第一轮搜索 `[0, 1]`
+>第二轮搜索 `[1, 2]`
+>第三轮搜索 `[2, 4]`
+>第四轮搜索 `[4, 8]`
 
 双指针技术用两个指针同时索引，一般一个位于开始，另一个位于末尾，并且对于数据有一定的排序要求。
 
-Python 的bisect包提供了 `bisect_left` 和 `bisect_right`，其中 `bisect_left` 是找到小于等于 `x` 的位置（尽量偏左），`bisect_right` 是找到大于等于 `x` 的位置（尽量偏右）。
+Python 的 bisect 包提供了 `bisect_left` 和 `bisect_right`，其中 `bisect_left` 是找到大于等于 `x` 的第一个位置（偏左），`bisect_right` 是找到大于 `x` 的位置（偏右）。
 
 ```python
 # bisect_left
@@ -1976,7 +2015,7 @@ def bl(arr, x):
     l, r = 0, len(arr) - 1
     while l <= r:
         mid = l + (r - l) // 2
-        if x <= arr[mid]:  # 这里是小于等于
+        if arr[mid] >= x:  # arr[mid] 大于等于 x
             r = mid - 1
         else:
             l = mid + 1
@@ -1987,7 +2026,7 @@ def br(arr, x):
     l, r = 0, len(arr) - 1
     while l <= r:
         mid = l + (r - l) // 2
-        if x < arr[mid]: # 这里是小于
+        if arr[mid] > x: # arr[mid] 大于 x
             r = mid - 1
         else:
             l = mid + 1
@@ -2063,7 +2102,7 @@ def kthSmallest(arr, l, r, k):
 	if (index > k - 1):
 		return kthSmallest(arr, l, index - 1, k)
 
-	# 否则在右边寻找，注意 k 要减去左边元素的数量
+	# 否则在右边寻找
 	return kthSmallest(arr, index + 1, r, k)
 ```
 
@@ -2305,6 +2344,68 @@ def binarySearch(arr, l, r, x):
         return binarySearch(arr, mid + 2, r, x)
         
     return -1
+```
+
+
+### 存在重复元素Ⅲ
+
+[220. 存在重复元素 III - 力扣（LeetCode）](https://leetcode.cn/problems/contains-duplicate-iii/)
+
+给你一个整数数组 `nums` 和两个整数 `indexDiff` 和 `valueDiff` 。找出满足下述条件的下标对 `(i, j)`：
+
+- `i != j`,
+- `abs(i - j) <= indexDiff`
+- `abs(nums[i] - nums[j]) <= valueDiff`
+
+如果存在，返回 `true` ；否则，返回 `false` 。
+
+该问题可以使用一个窗口限制indexDiff内的元素，然后用二分搜索搜索到比 `nums[i]-valueDiff` 大的元素的位置，并且判断该元素 x 是否满足 `x <= nums[i]+valueDiff`。因此需要使用bisect提供的insort方法生成有序列表
+
+```python
+def containsNearbyAlmostDuplicate(self, nums, indexDiff: int, valueDiff):
+	window = []
+
+	for i in range(len(nums)):
+		# 删除左边界的元素
+		if i > indexDiff:
+			window.remove(nums[i-indexDiff-1])
+		
+		if len(window) != 0:
+			idx = bisect.bisect_left(window, nums[i]-valueDiff)
+			if idx != len(window) and window[idx] <= nums[i]+valueDiff: 
+				return True
+		# 有序插入
+		bisect.insort(window, nums[i])
+	return False
+```
+
+还可以利用桶排序来做，设置桶的大小为 `valueDiff+1`，如果两个元素处于同一个桶内那么肯定满足条件，如果不在同一个桶中，那就判断左右两个桶是否存在满足条件的元素。这里需要注意的是，每个桶只要保留一个数字即可，因为只要一个桶内有两个数字，那就可以直接返回True了。
+
+这里计算桶的位置时需要注意，如果使用python中的整除 `//` 就无需考虑正负。（如果是 C/C++，那么需要考虑负数时的情形，负数需要先加1，假设 w = 10，那么0-9会被分为一组，-1到-10应该被分为一组，如果负数不先增加1，那么-10会被分到另一组。）
+
+```python
+def containsNearbyAlmostDuplicate(nums, indexDiff: int, valueDiff: int):
+	mp = {}
+
+	# 将元素分到对应的桶内
+	def getId(num, w):
+		return num // w
+		# else: return ((num + 1) / w) - 1  # 对于 C/C++等语言
+	
+	w = valueDiff + 1  # 桶的大小
+
+	for i, n in enumerate(nums):
+		id = getId(n, w)
+		if id in mp: return True
+		if id + 1 in mp and abs(n - mp[id+1]) <= valueDiff:
+			return True
+		if id - 1 in mp and abs(n - mp[id-1]) <= valueDiff:
+			return True
+		mp[id] = n
+		if i >= indexDiff:
+			del mp[getId(nums[i-indexDiff], w)]
+
+	return False
 ```
 
 
@@ -2603,7 +2704,7 @@ def segregateevenandodd(arr):
 使用两个指针 `p0` 和 `p1` 分别指向 0 和 1 应处于的位置，然后遍历数组 `i`，如果一个值为1，那么将`i` 和指针 `p1` 交换，然后 `p1+1`；如果一个值为 0，那么将 `i` 和指针 `p0` 交换，此处需要注意一点，这里的交换可能会把 1 交换出去，如果 `p0<p1`，那么之前一定有连续的1，此时会把1交换出去，所以需要将 `p1` 需要和第 `i` 个值交换，重新换回来，两个指针均向后移动。
 
 ```python
-def sortColors(nums: List[int]) -> None:
+def sortColors(nums: List[int]):
 	p0 = 0
 	p1 = 0
 
@@ -2980,7 +3081,7 @@ def minSwaps(arr):
 
 #### 环检测
 
-一个未排序的元素处于一个环中，找出这个环，环的大小减一就是这个环内元素需要交换的次数
+一个未排序的元素处于一个环中，找出这个环，环的大小减一就是这个环内元素需要交换的次数。先记录未排序数组中每个元素的位置，然后对数组进行排序。遍历排序好的数组，如果已经访问过或者 `j=pos[arr[j]]`，就无需计算环的大小；否则如果 j 未被访问，则 `j=pos[arr[j]]`。
 
 ```python
 def minSwaps(arr):
@@ -3286,7 +3387,7 @@ https://www.geeksforgeeks.org/merge-two-sorted-arrays-o1-extra-space
 
 给定两个有序列表，将这两个列表变成一个整体有序的列表，即一个列表只包含较小的部分值，另一个列表包含较大的部分值
 
-使用两个指针分别指向一个列表的结尾和另一个列表的开始，如果`a[i]>b[j]`，就交换，并移动到下一位，否则让一个指针继续前进，直至停止迭代。
+使用两个指针分别指向一个列表的结尾和另一个列表的开始，如果`a[i]>b[j]`，就交换，并移动到下一位，否则让一个指针继续前进，直至停止迭代。当然这样处理之后，最后还需要对两个数组分别排序。
 
 
 ```python
@@ -3621,53 +3722,9 @@ def maxWater(arr):
 ```
 
 
-#### 双指针优化空间
-
-
-考虑到如果我们知道 `arr[left]` 的左边最大值，和`arr[right]` 的右边最大值，左边最大值小于右边最大值，可以确定 `arr[left]`（因为`arr[left]` 的右侧最大值肯定大于左侧最大值），否则可以确定 `arr[right]`。
-
-```python
-def maxWater(arr):
-    left = 1
-    right = len(arr) - 2
-
-    # lMax : Maximum in subarray arr[0..left-1]
-    # rMax : Maximum in subarray arr[right+1..n-1]
-    lMax = arr[left - 1]
-    rMax = arr[right + 1]
-
-    res = 0
-    while left <= right:
-      
-        # If rMax is smaller, then we can decide the 
-        # amount of water for arr[right]
-        if rMax <= lMax:
-          
-            # Add the water for arr[right]
-            res += max(0, rMax - arr[right])
-
-            # Update right max
-            rMax = max(rMax, arr[right])
-
-            # Update right pointer as we have decided 
-            # the amount of water for this
-            right -= 1
-        else: 
-          
-            # Add the water for arr[left]
-            res += max(0, lMax - arr[left])
-
-            # Update left max
-            lMax = max(lMax, arr[left])
-
-            # Update left pointer as we have decided 
-            # the amount of water for this
-            left += 1
-    return res
-```
-
-
 #### 使用栈
+
+使用栈保存上一个更大的值
 
 ```python
 def maxWater(arr):
@@ -3675,22 +3732,19 @@ def maxWater(arr):
     res = 0
 
     for i in range(len(arr)):
-       
-        # Pop all items smaller than arr[i]
         while st and arr[st[-1]] < arr[i]:
             pop_height = arr[st.pop()]
 
             if not st:
                 break
 
-            # arr[i] is the next greater for the removed item
-            # and new stack top is the previous greater 
+            # arr[i] 是下一个更大的值，并且新的栈顶元素为前一个更大的值
             distance = i - st[-1] - 1
 
-            # Take the minimum of two heights (next and prev greater)
+            # 取前一个和后一个的最小值
             water = min(arr[st[-1]], arr[i])
 
-            # Find the amount of water
+            # 计算水量
             water -= pop_height
 
             res += distance * water
@@ -3742,35 +3796,7 @@ def subarraySum(arr, target):
 
 ### 固定大小的子序列中的最大值
 
-找到一个序列中每个固定长度的子序列的最大值。使用一个有序列表作为窗口
-
-```python
-from sortedcontainers import SortedList
-
-def maxSlidingWindow(arr, k):
-    ans = []
-    window = SortedList()
-
-    # 初始化一个窗口
-    for i in range(k):
-        window.add((-arr[i], i))  # 最大堆
-
-    # 获取最大值对应的
-    ans.append(-window[0][0])
-
-    # Process the remaining elements
-    for i in range(k, len(arr)):
-        window.add((-arr[i], i))
-        # Remove the element that is out of the window
-        if i - k >= 0:
-            window.remove((-arr[i - k], i - k))
-        # The maximum element in the current window
-        ans.append(-window[0][0])
-
-    return ans
-```
-
-也可以用一个最大堆保存
+用一个最大堆保存当前窗口的元素和索引，为了弹出最大值，需要对元素取负值。删除元素时，需要注意用一个 while 判断栈顶元素的索引是否还在窗口内，如果不在窗口中，就删除栈顶元素。
 
 ```python
 import heapq
@@ -3789,7 +3815,7 @@ def max_sliding_window(arr, k):
     for i in range(k, len(arr)):
         heapq.heappush(heap, (-arr[i], i))
 
-        # 删除即将出去的元素
+        # 判断栈顶元素是否还在窗口内，不在窗口就删除
         while heap[0][1] <= i - k:
             heapq.heappop(heap)
     
@@ -3828,7 +3854,7 @@ def maxSlidingWindow(nums, k: int):
 ```
 
 
-### 长度为K的子序列中的首个负数
+### 长度为 K 的子序列中的首个负数
 
 [First negative integer in every window of size k - GeeksforGeeks](https://www.geeksforgeeks.org/first-negative-integer-every-window-size-k/)
 
@@ -3850,6 +3876,7 @@ def printFirstNegativeIntegar(arr, n, k):
         else:
             print(arr[Di[0]], end=" ")
         
+	    # 如果首个负数已经不在窗口内，就删除
         while Di and Di[0] <= (i - k):
             Di.popleft()
         
@@ -3905,8 +3932,7 @@ def solve(s, t):
 
 [Largest sum subarray of size at least k - GeeksforGeeks](https://www.geeksforgeeks.org/largest-sum-subarray-least-k-numbers/)
 
-
-kadane算法：先计算每个索引前的最大和，然后用一个大小为k的窗口，计算连续k个元素之和，然后加上前面 i - k 个元素的最大和看是否更大。
+kadane算法：先计算每个索引前的最大和，然后用一个大小为 k 的窗口，计算连续 k 个元素之和，然后加上前面 i - k 个元素的最大和看是否更大。
 
 ```python
 def maxSumWithK(a, n, k):
@@ -3942,7 +3968,7 @@ def maxSumWithK(arr, k):
     for i in range(k):
         sum += arr[i]
 
-    last = 0
+    last = 0   # 记录 i - k 之前的元素之和
     j = 0
     ans = float('-inf')
     ans = max(ans, sum)
@@ -3985,9 +4011,9 @@ def maxSumWithK(arr, k):
 
 [Maximum subarray size, such that all subarrays of that size have sum less than k - GeeksforGeeks](https://www.geeksforgeeks.org/maximum-subarray-size-subarrays-size-sum-less-k/)
 
-给定一个序列，找到一个最大的序列长度，使得所有小于该长度的子序列之和小于k。
+给定一个正整数序列，找到一个最大的序列长度，使得所有小于该长度的子序列之和小于k。
 
-该问题可以转为找到一个最小的子序列长度使得其之和大于k，可以使用滑动窗口解决
+该问题可以转为找到一个最小的子序列长度使得其之和大于k，可以使用滑动窗口解决，那么该长度减1，便是最大的序列长度，使得所有小于该长度的子序列之和小于k。
 
 ```python
 def solve(arr, k):
@@ -4005,7 +4031,7 @@ def solve(arr, k):
             l += 1
             res = min(res, r - l + 1)
 
-            # 对于全部大于0的序列来说，如果s等于0，意味着 l > r，
+            # 对于全部大于 0 的序列来说，如果 s 等于0，意味着 l > r，
             # 证明arr[r]为一个大于k的数，这样不可能出现和小于k的子序列
             if s == 0:
                 no_res = True
@@ -4018,34 +4044,71 @@ def solve(arr, k):
 
 ### 子序列模m余数的最大值
 
+[Maximum subarray sum modulo m | GeeksforGeeks](https://www.geeksforgeeks.org/maximum-subarray-sum-modulo-m/)
+
 对于一个序列，求其子序列模m后的余数的最大值
 
-首先求前缀和关于m的余数，并存入一个集合中，每次求出余数后，在这个集合中找到比这个余数至少大1的余数，假设找到余数正好大 `a`，这样两个前缀和相减之后，余数为`m-a`。
+首先求前缀和关于m的余数，并存入一个集合中，每次求出余数后，在这个集合中找到比这个余数至少大1的余数，假设找到余数正好大 `a`，这样两个前缀和相减之后，余数为`m-a`。为了节约时间，使用二分搜索，同时为了保证前缀和有序，需要在插入使用二分插入。
 
 ```python
-def solve(arr, m):
-    n = len(arr)
-
-    mp = set()
-    mp.add(0)   # 空子序列之和为0，余数也为0
-    prefix = 0
-    res = 0
-
-    for i in range(n):
-
-        prefix = (prefix + arr[i]) % m
-        res = max(res, prefix)
-        _p = 0
-        for p in mp:
-            if p >= prefix + 1:
-                _p = p
-        
-        if _p != 0:
-            res = max(res, prefix - _p + m)
-        mp.add(prefix)
-    return res
+def maxSub(self, arr, m):
+	prefix = 0
+	maxim = 0
+ 
+	S = []   
+	n = len(arr)
+	# 遍历数组
+	for i in range(n):
+ 
+		# 计算前缀和
+		prefix = (prefix + arr[i]) % m
+ 
+		# 计算 arr[0..i] 的最大前缀和
+		maxim = max(maxim, prefix)
+		
+		it = 0
+		# 找到大于等于prefix+1的最小元素的位置
+		it_index = bisect_left(S, prefix+1)
+		if it_index < len(S):
+			it = S[it_index]
+ 
+		if (it != 0) :
+			maxim = max(maxim, prefix - it + m )
+ 
+		# 二分插入prefix，保持有序
+		bisect.insort(S, prefix)
+ 
+	return maxim
 ```
 
+
+### 二维前缀和
+
+
+[304. 二维区域和检索 - 矩阵不可变 - 力扣（LeetCode）](https://leetcode.cn/problems/range-sum-query-2d-immutable/)
+
+二维前缀和有如下性质
+
+`prefix[i+1][j+1] = prefix[i][j+1]+prefix[i+1][j]-prefix[i][j]+matrix[i][j]`
+
+
+```python
+class NumMatrix:
+
+    def __init__(self, matrix: List[List[int]]):
+        m = len(matrix)
+        n = len(matrix[0])
+        self.mp = [[0 for _ in range(n+1)] for _ in range(m+1)]
+
+        for i in range(m):
+            for j in range(n):
+                self.mp[i+1][j+1] = self.mp[i][j+1] + self.mp[i+1][j] \
+                    - self.mp[i][j] + matrix[i][j]
+
+    def sumRegion(self, row1: int, col1: int, row2: int, col2: int) -> int:
+        return self.mp[row2+1][col2+1] + self.mp[row1][col1] \
+            - self.mp[row2+1][col1] - self.mp[row1][col2+1]
+```
 
 
 ## 字符串
@@ -4483,12 +4546,10 @@ def solve(s):
     sols = []
     def _solve(i, res):
         if i == n:
-            if res != "":
-                sols.append(res)
+            if res != "": sols.append(res)
             return
-		# 每个位置选择
-        _solve(i+1, res)
-        _solve(i+1, res+s[i])
+        _solve(i+1, res)  # 选择该字符
+        _solve(i+1, res+s[i])  # 不选择该字符
     
     _solve(0, "")
     print(sorted(sols))
@@ -4640,7 +4701,7 @@ def restoreIpAddresses(s: str) -> List[str]:
 
 [Word Break - GeeksforGeeks](https://www.geeksforgeeks.org/word-break-problem-dp-32/)
 
-判断一句话能否被给定的词表分解，使用动态规划的方法，通过一个数组保存 `s[0:i+1]` 时是否可以被分，如果可以，就尝试一下在 `i+1` 之后是否存在可以被分解的，每次只取最短的一种可能。
+判断一句话能否被给定的词表分解，使用动态规划的方法，通过一个数组保存 `s[0..i]` 时是否可以被分，如果可以，就尝试一下在 `i+1` 之后是否存在可以被分解的，每次只取最短的一种可能。
 
 ```python
 def wordBreak(s, dictionary):
@@ -4657,7 +4718,7 @@ def wordBreak(s, dictionary):
 				return True
 			
 			for j in range(i, n):
-				if (not dp[j] and s[i+1:j+1] in dictionary):
+				if (not dp[j]) and s[i+1:j+1] in dictionary:
 					dp[j] = True
 				
 				if dp[j] and j == n-1:
@@ -4831,7 +4892,7 @@ def maxBalancedSubseq(str):
     return n - (invalidOpen + invalidClose)
 ```
 
-
+该方法也可以验证字符串是否平衡
 
 
 ### 平衡子序列的最小相邻交换次数
@@ -4860,7 +4921,33 @@ def minimumNumberOfSwaps(s):
 
 [Form minimum number from given sequence - GeeksforGeeks](https://www.geeksforgeeks.org/form-minimum-number-from-given-sequence/)
 
+给定一个序列，该序列由 `I` 和 `D` 这两种字符构成，`I` 表示增加，`D` 表示减小，如 `DI`可以表示为 `213`，求出给定的序列所能表示的最小数字
 
+首先观察到如果第一个字符为 `I`，那么最开始的输出为 `12`，否则为 `21`，同时能用的数字为3。现在从第二个字符开始遍历，如果是 `I`，那么直接将还未使用的最小值加到后面即可，并且更新还未用的最小值和最近的 `I`；如果索引 i 处的字符是 `D`，那么将输出中的第 i 个元素加到输出中，并且对于前一个 `I` 和 `i` 处的结果全部加1。
+
+```python
+def printLeast(arr):
+    post_of_I = 0
+    v = []
+    if arr[0] == "I":
+        v.extend([1, 2])
+        post_of_I = 1
+    else:
+        v.extend([2, 1])
+    
+    min_avail = 3
+    for i in range(1, len(arr)):
+        if arr[i] == "I":
+            v.append(min_avail)
+            min_avail += 1
+            post_of_I = i + 1
+        else:
+            v.append(v[i])
+            for j in range(post_of_I, i+1):
+                v[j] += 1
+            min_avail += 1
+    return v
+```
 
 
 ### 增加最长公共子序列的方式
@@ -4869,7 +4956,7 @@ def minimumNumberOfSwaps(s):
 
 有两个序列，现在向第一个序列中添加一个元素，使得两个序列的最长公共子序列增加1，请问有多少种方式
 
-使用动态规划的方法，在第一个字符串中添加一个元素，为了使最长公共子序列加1，那就要这个元素匹配到第二个序列的某个元素，即删除掉第二个序列的这个元素后，仍然能够保证最长公共子序列长度不变。
+使用动态规划的方法，在第一个字符串中添加一个元素，为了使最长公共子序列加1，那就要这个元素匹配到第二个序列的某个元素，并且删除掉第二个序列的这个元素后，仍然能够保证最长公共子序列长度不变。
 
 ```python
 def solve(s1, s2):
@@ -4884,7 +4971,7 @@ def solve(s1, s2):
             positions[s2[i]] = [i+1]
     
     lcs = [[0 for _ in range(n2+2)] for _ in range(n1+2)]
-    # lcs[i][j]: s1[0...i] 和 s2[0...j] 的最长公共长度
+    # lcs[i][j]: s1[0..i] 和 s2[0..j] 的最长公共长度
     for i in range(1, n1+1):
         for j in range(1, n2+1):
             if s1[i-1] == s2[j-1]:
@@ -4894,7 +4981,7 @@ def solve(s1, s2):
     
     lcsr = [[0 for _ in range(n2+2)] for _ in range(n1+2)]
 
-    # lcsr[i][j]: s1[i...n1] 和 s2[j...n2] 的最长公共子序列长度
+    # lcsr[i][j]: s1[i:n1] 和 s2[j:n2] 的最长公共子序列长度
     for i in range(n1, 0, -1):
         for j in range(n2, 0, -1):
             if s1[i-1] == s2[j-1]:
@@ -5139,7 +5226,7 @@ def largestNumber(nums: List[int]) -> str:
 	return "".join(strs)
 ```
 
-### 词搜索
+### 单词搜索
 
 在二维数据中搜索某个词：[Word Search in a 2D Grid of characters - GeeksforGeeks](https://www.geeksforgeeks.org/search-a-word-in-a-2d-grid-of-characters/)
 
@@ -5195,6 +5282,62 @@ if not cnt >= Counter(word):
 if cnt[word[-1]] < cnt[word[0]]:
 	word = word[::-1]
 ```
+
+
+如果需要多次搜索单词 [212. 单词搜索 II - 力扣（LeetCode）](https://leetcode.cn/problems/word-search-ii/description/)，需要用到字典树，对于每个位置进行dfs，每找到一个单词就删除一个
+
+```python
+def findWords(board, words):
+	class Trie:
+		def __init__(self):
+			self.children = defaultdict(Trie)
+			self.word = ""
+		
+		def insert(self, word):
+			cur = self
+			for c in word:
+				cur = cur.children[c]
+			cur.word = word
+		
+	ans = []
+	m, n = len(board), len(board[0])
+	trie = Trie()
+	for w in words:
+		trie.insert(w)
+	
+	dirs = [[1, 0], [-1, 0], [0, 1], [0, -1]]
+
+	def dfs(i, j, now):
+		# 如果当前字符不在子节点中，则证明不存在字符
+		if board[i][j] not in now.children:
+			return
+
+		ch = board[i][j]
+		nxt = now.children[ch]  # 遍历子节点
+
+		if nxt.word != "":    # 如果这里包括一个单词
+			ans.append(nxt.word)
+			nxt.word = ""     # 删除这里的单词
+		
+		if nxt.children:      # 如果有子节点
+			board[i][j] = "#"   # 标记已经访问过，防止重复访问
+
+			for d in dirs:
+				ni, nj = i + d[0], j + d[1]
+				if 0 <= ni < m and 0 <= nj < n:
+					dfs(ni, nj, nxt)
+			board[i][j] = ch
+		
+		if not nxt.children:  # 去除空节点
+			now.children.pop(ch)
+
+	for i in range(m):
+		for j in range(n):
+			dfs(i, j, trie)
+	return ans
+```
+
+
 
 
 ### 使得括号是否平衡的最小转变次数
@@ -5353,7 +5496,7 @@ def solve_dp(arr, k):
         s = 0
         for i in range(curr, n):
             s += arr[i]
-            tot = s + i - curr
+            tot = s + i - curr  # 空格加上字符串的长度
 
             if tot > k:
                 break
@@ -5411,6 +5554,83 @@ def findSubstring(s, words):
 ```
 
 
+### 最短回文串
+
+[214. 最短回文串 - 力扣（LeetCode）](https://leetcode.cn/problems/shortest-palindrome/description/)
+
+用 KMP 做的
+
+
+### 删除无效括号
+
+[301. 删除无效的括号 - 力扣（LeetCode）](https://leetcode.cn/problems/remove-invalid-parentheses/description/)
+
+给你一个由若干括号和字母组成的字符串 `s` ，删除最小数量的无效括号，使得输入的字符串有效。
+
+有两种解法，第一种是回溯法，但是要注意，为了降低复杂度，需要先计算出需要删除的左括号和右括号的数量。左括号删除的数量为左括号的数量减去右括号的数量，右括号删除的数量则为左括号为0时，右括号的数量
+
+验证括号是否合法的代码为
+
+```python
+def validate(str):
+	cnt = 0
+	for c in str:
+		if c == '(':
+			cnt += 1
+		elif c == ')':
+			cnt -= 1
+			if cnt < 0:
+				return False
+	return cnt == 0
+```
+
+
+```python
+def removeInvalidParentheses(self, s: str) -> List[str]:
+	if validate(s):
+		return [s]
+	
+	lremove, rremove = 0, 0
+	sols = []
+
+	# 计算需要删除的左括号和右括号
+	for i in range(len(s)):
+		if s[i] == "(":
+			lremove += 1
+		elif s[i] == ")":
+			if lremove == 0:
+				rremove += 1
+			else:
+				lremove -= 1  # 可匹配一个左括号
+	
+	def dfs(s, idx, lr, rr):
+		if lr == 0 and rr == 0:
+			if validate(s):
+				sols.append(s)
+			return
+		
+		# 尝试对每个位置进行删除（因为删除后的字符串长度会变化，需要每次都进行判断）
+		for i in range(idx, len(s)):
+			if i != idx and s[i] == s[i-1]:  # 跳过重复的元素
+				continue
+			
+			# 剩余字符无法满足删除的需求
+			if lr + rr > len(s) - i:
+				return
+
+			# 尝试删除左括号
+			if lr > 0 and s[i] == "(":
+				dfs(s[:i] + s[i+1:], i, lr-1, rr)
+			# 尝试删除右括号
+			if rr > 0 and s[i] == ")":
+				dfs(s[:i] + s[i+1:], i, lr, rr-1)
+	dfs(s, 0, lremove, rremove)
+	return sols
+```
+
+
+第二种方法，由于是删除最小数量的括号，因此可以使用BFS来解决这一问题，最简单的是尝试删除每个括号，并且用一个集合标记已经访问过的字符串，这样如果能找到合法的字符串就返回（因为这是删除最小数量的结果）
+
 
 
 ## 回溯（递归）
@@ -5450,9 +5670,7 @@ def combinationSum(candidates, target: int):
             return
 
         for i in range(idx, n):   # 遍历所有的组合
-            res.append(candidates[i])
-            solve(target - candidates[i], i, res) 
-            res.pop()
+            solve(target - candidates[i], i, res + [candidates[i]]) 
     solve(target, 0, [])
     return sols
 ```
@@ -5475,9 +5693,7 @@ def combinationSum(candidates, target: int):
 		
 		# 选择该元素
 		if target >= candidates[idx]:
-			res.append(candidates[idx])
-			solve(target - candidates[idx], idx, res)
-			res.pop()
+			solve(target - candidates[idx], idx, res+[candidates[idx]])
 	solve(target, 0, [])
 	return sols
 ```
@@ -5490,32 +5706,31 @@ def combinationSum(candidates, target: int):
 一种做法是先对candidate进行排序，在选择时跳过重复元素
 
 ```python
-class Solution:
-    def combinationSum2(self, candidates: List[int], target: int) -> List[List[int]]:
-        res = []
-        candidates.sort()  # 先排序，方便去重
-        
-        def backtrack(start, target, path):
-            if target == 0:
-                res.append(path)
-                return
-            
-            for i in range(start, len(candidates)):
-                if i > start and candidates[i] == candidates[i - 1]:  # 跳过重复元素
-                    continue
-                if candidates[i] > target:
-                    break  # 剪枝优化
-                
-                backtrack(i + 1, target - candidates[i], path + [candidates[i]])
-        
-        backtrack(0, target, [])
-        return res
+def combinationSum2(candidates, target: int):
+	res = []
+	candidates.sort()  # 先排序，方便去重
+	
+	def backtrack(start, target, path):
+		if target == 0:
+			res.append(path)
+			return
+		
+		for i in range(start, len(candidates)):
+			if i > start and candidates[i] == candidates[i-1]:  # 跳过重复元素
+				continue
+			if candidates[i] > target:
+				break  # 剪枝优化
+			
+			backtrack(i + 1, target - candidates[i], path + [candidates[i]])
+	
+	backtrack(0, target, [])
+	return res
 ```
 
 另一种做法，统计candidate中每个元素出现的次数，然后加上一个频次数组来确保每个元素只被选择一次
 
 ```python
-def combinationSum2(candidates: List[int], target: int) -> List[List[int]]:
+def combinationSum2(candidates: List[int], target: int):
     sols = []
     c = Counter(candidates)
     nums = list(c.keys())
@@ -5547,6 +5762,7 @@ def combinationSum2(candidates: List[int], target: int) -> List[List[int]]:
     return sols
 ```
 
+
 ### 数组全排列
 
 [46. 全排列 - 力扣（LeetCode）](https://leetcode.cn/problems/permutations/description/)
@@ -5576,13 +5792,13 @@ def permute(self, nums):
 
 如果存在重复数据[47. 全排列 II - 力扣（LeetCode）](https://leetcode.cn/problems/permutations-ii/)
 
-先排序，在求解的时候去重
+先排序，在求解的时候去重，具体方法为使用一个数组标记填入的元素，如果一个元素和其前一个元素相等，但是其前一个元素还未被填入，则跳过。如果不跳过这种情况，就会出现重复的排列
 
 ```python
 def permuteUnique(nums):
 	sols = []
 	n = len(nums)
-	visited = [0] * n  # 记录已经被填入的元素
+	vs = [0] * n  # 记录已经被填入的元素
 	nums.sort()
 	def solve(res):
 		if len(res) == n:
@@ -5591,17 +5807,18 @@ def permuteUnique(nums):
 		
 		for i in range(n):
 			# 如果已经被填入，或者和未填入的前一个元素相等
-			if visited[i] or (i > 0 and not visited[i-1] and nums[i] == nums[i-1]):
+			if vs[i] or (i > 0 and not vs[i-1] and nums[i] == nums[i-1]):
 				continue
 				
-			visited[i] = 1
+			vs[i] = 1
 			solve(res+[nums[i]])
-			visited[i] = 0
+			vs[i] = 0
 	solve([])
 	return sols
 ```
 
 这里的 `i > 0 and not visited[i-1] and nums[i] == nums[i-1]` 实际上保证了重复的元素可以按照顺序填入，必须前一个元素已经填入，该元素才能填入。
+
 
 ### 反转队列
 
@@ -5709,7 +5926,6 @@ def longestPalindromic(strn, l, r, count):
 
 二叉树的底部视图指从底部向上看能看到的节点，这里需要考虑每个节点的水平位置，水平位置相等并且处于同一层的选择层次遍历时后遍历到的节点
 
-
 使用层次遍历，遍历时记住每个节点对应的水平位置，即左子树是根节点的水平位置减1，右子树则是加1。
 
 ```python
@@ -5748,10 +5964,8 @@ def get_all_subsets2(arr, l, idx, subs):
         subs.append(l[:])   # 注意需要使用切片
         return
 
-    l.append(arr[idx])
-    get_all_subsets2(arr, l, idx+1, subs)
+    get_all_subsets2(arr, l + [arr[idx]], idx+1, subs)
 
-    l.pop()
     get_all_subsets2(arr, l, idx + 1, subs)
 ```
 
@@ -5804,7 +6018,7 @@ def subsetsWithDup(nums) -> List[List[int]]:
 普通的拆分，每个子数组不为空
 
 ```python
-def solve_p2(arr):
+def solve(arr):
     n = len(arr)
     def _solve(arr, res, idx):
         if idx >= n:
@@ -5823,7 +6037,7 @@ def solve_p2(arr):
 拆分为固定的 k 个子数组，每个子数组不为空
 
 ```python
-def solve_p(arr, k):
+def solve(arr, k):
     
     n = len(arr)
     def _solve(arr, nk, res, idx):
@@ -6180,9 +6394,7 @@ def mat_exp(self, n, m):
 
 最简单的算法是对每行进行二分查找
 
-还有一种时间复杂度更低的方法，Z 字查找
-
-我们可以从矩阵 matrix 的右上角 `(0,n−1)` 进行搜索。在每一步的搜索过程中，如果我们位于位置 `(x,y)`，那么我们希望在以 matrix 的左下角为左下角、以 `(x,y)` 为右上角的矩阵中进行搜索，即行的范围为 `[x,m−1]`，列的范围为 `[0,y]`：
+还有一种时间复杂度更低的方法，Z 字查找，我们可以从矩阵 matrix 的右上角 `(0,n−1)` 进行搜索。在每一步的搜索过程中，如果我们位于位置 `(x,y)`，那么我们希望在以 matrix 的左下角为左下角、以 `(x,y)` 为右上角的矩阵中进行搜索，即行的范围为 `[x,m−1]`，列的范围为 `[0,y]`：
 
 如果 `matrix[x,y]=target`，说明搜索完成；
 
@@ -6298,7 +6510,7 @@ def solve(mat):
 
 另一种方法，先创建一个right和down矩阵，`right[i][j]` 表示从 `(i,j)` 这个点到右侧有多少个连续的 `X`，`down[i][j]` 表示从 `(i,j)` 这个点到下侧有多少个连续的 `X`
 
-因此对于左上角的 `[i,j]` 而言，其边界均为`X`的最大长度为 `right[i][j]` 和 `down[i][j]` 中的最小值。同时对长度进行遍历，判断左下和右上是不是也满足至少有若干个连续的 `X`
+因此对于左上角的 `[i,j]` 而言，其边界均为 `X` 的最大长度为 `right[i][j]` 和 `down[i][j]` 中的最小值。同时对长度进行遍历，判断左下和右上是不是也满足至少有若干个连续的 `X`
 
 ```python
 def solve(mat):
@@ -6310,7 +6522,7 @@ def solve(mat):
     for i in range(n-1, -1, -1):
         for j in range(n-1, -1, -1):
             if mat[i][j] == "X":
-                right[i][j] = 1 if j+1 == n else right[i][j+1]+1
+                right[i][j] = 1 if j+1 == n else right[i][j+1] + 1
                 down[i][j] = 1 if i+1 == n else down[i+1][j] + 1
     maxSize = 0
     for i in range(n):
@@ -6343,7 +6555,7 @@ def solve(mat):
 
         if mat[i][j] == 0:
             return 0
-        nv = 1 + min(min(right, down), rd)
+        nv = 1 + min(right, down, rd)
         ans[0] = max(nv, ans[0])
         return nv
 
@@ -6469,9 +6681,7 @@ def median(mat):
 
 若干个矩阵相乘，求最小的矩阵乘法次数
 
-回溯法
-
-将矩阵连乘分解到两两相乘的地步
+回溯法，将矩阵连乘分解到两两相乘的地步
 
 ```python
 def solve(chains):
@@ -7114,7 +7324,7 @@ class LinkedList:
 
 给你一个以字符串表示的非负整数 `num` 和一个整数 `k` ，移除这个数中的 `k` 位数字，使得剩下的数字最小。请你以字符串形式返回这个最小的数字。
 
-这里的K位是按顺序移除的k个数字，不需要连续。
+这里的 k 位是按顺序移除的 k 个数字，不需要连续。
 
 解决方法：将每位数字压入栈中，如果当前数字小于栈顶数字就从栈顶移除一个数字（这里需要使用while持续进行），将该数字塞入栈中
 
@@ -7236,6 +7446,7 @@ def bigger(arr):
         st.append(i)
 ```
 
+
 ### 所有子数组的最大值
 
 [Sum of Max of Subarrays - GeeksforGeeks](https://www.geeksforgeeks.org/sum-of-maximum-elements-of-all-possible-sub-arrays-of-an-array/)
@@ -7272,14 +7483,15 @@ def maxOfMins(self, arr):
         # 计算上一个和下一个较小值之间的距离
         for i in range(n):
             lenArr[i] = next[i] - prev[i] - 1
+        # 对于第i个元素，窗口大小为lenArr[i]时该元素为其中的一个最小值
     
-        # 注意这里的windowSize减一是因为数组从0开始
+        # 注意这里的windowSize减一是因为数组从0开始索引
         # 即 res[0] 为长度为1的窗口的结果
         for i in range(n):
-            windowSize = lenArr[i] - 1
+            windowSize = lenArr[i] - 1   
             res[windowSize] = max(res[windowSize], arr[i])
     
-        # 
+        # 窗口长度为 i + 1 的最大最小值一定小于等于窗口为i的最大最小值
         for i in range(n - 2, -1, -1):
             res[i] = max(res[i], res[i + 1])
     
@@ -8807,6 +9019,46 @@ def solve(root):
 ```
 
 
+### 完全二叉树的节点数
+
+[222. 完全二叉树的节点个数 - 力扣（LeetCode）](https://leetcode.cn/problems/count-complete-tree-nodes/description/)
+
+计算一个完全二叉树的节点数，这个问题很容易设计一个 `O(n)` 的算法，下面介绍一个时间复杂度为 $O(\log^2(n))$ 的算法
+
+首先先计算树的高度 h，这样可以确定树的节点数为 $2^h$ 到 $2^{h+1}-1$，然后用二分搜索的方式找到一个节点，判断该节点是否位于二叉树中。假设要判断的节点为 12，其二进制表示为 `1100`，最高位为1，之后 1 表示右子树，0表示左子树，只要不为空，证明存在
+
+```python
+def countNodes(root: Optional[TreeNode]) -> int:
+	if root is None: return 0
+	h = -1
+	curr = root
+	while curr is not None:
+		curr = curr.left
+		h += 1
+	
+	left, right = 2 ** h, 2 ** (h+1) - 1
+
+	def check_exist(bstr):
+		curr = root
+		for i in range(1, len(bstr)):
+			if bstr[i] == "0":
+				curr = curr.left
+			else:
+				curr = curr.right
+		return curr != None
+	ans = 0
+	while left <= right:
+		mid = left + (right - left) // 2
+		binmid = bin(mid)[2:]
+
+		if check_exist(binmid):
+			left = mid + 1
+			ans = mid
+		else:
+			right = mid - 1
+	return ans
+```
+
 
 ### 二叉树的最大宽度
 
@@ -9226,7 +9478,7 @@ def solve(root):
 
 另一种解决该问题的方法是先中序遍历树，对于二叉搜索树而言，中序遍历的结果是递增的，如果中序遍历的结果非递增，则证明不是二叉搜索树。
 
->如果需要找到二叉搜索树中第 k 大的数，有这样的解法，使用中序遍历的倒序获得从大到小的排列，在遍历如果发现已经找到第k大的数时停止后续的迭代
+>如果需要找到二叉搜索树中第 k 大的数，有这样的解法，使用中序遍历的倒序获得从大到小的排列，在遍历如果发现已经找到第 k 大的数时停止后续的迭代
 
 
 ```python
@@ -12661,7 +12913,7 @@ def minimumDeleteSum(s1: str, s2: str) -> int:
 			if s1[i-1] == s2[j-1]:
 				dp[i][j] = dp[i-1][j-1]
 			else:
-			# 选择删除s1中第i-1个字符，或者删除 s2 中第j-1个字符
+			# 选择删除 s1 中第 i-1 个字符，或者删除 s2 中第 j-1 个字符
 				dp[i][j] = min(dp[i-1][j] + ord(s1[i-1]), dp[i][j-1] + ord(s2[j-1]))
 	return dp[n1][n2]
 ```
@@ -12754,7 +13006,7 @@ def solve(s):
 ```
 
 
-用栈保存下标，始终保持栈底元素为当前遍历过的元素的最后一个没有被匹配的右括号的下标，具体来说，保存所有 `(` 的下标，同时遇到 `)`，先弹出栈顶元素，表示匹配了当前右括号，如果栈为空，表明没有匹配，将其下标放入栈中，即没有被匹配的有括号的下标；如果栈不为空，当前有括号的下标减去栈顶元素即为以该右括号为结尾的最长有效括号的长度。
+用栈保存下标，始终保持栈底元素为当前遍历过的元素的最后一个没有被匹配的右括号的下标，具体来说，保存所有 `(` 的下标，遇到 `)`，先弹出栈顶元素，表示匹配了当前右括号，如果栈为空，表明没有匹配，将其下标放入栈中，即没有被匹配的有括号的下标；如果栈不为空，当前有括号的下标减去栈顶元素即为以该右括号为结尾的最长有效括号的长度。
 
 ```python
 def solve_s(s):
@@ -12986,7 +13238,7 @@ def solve(nums):
         if nums[i] > stack[-1]:
             stack.append(nums[i])
         else:
-            lb = bisect_left(stack, nums[i])  # 找到小于等于nums[i]的位置
+            lb = bisect_left(stack, nums[i])  # 找到大于等于nums[i]的位置
             stack[lb] = nums[i]
     return len(stack)
 ```
@@ -13022,7 +13274,7 @@ def solve(nums):
             stack.append(nums[i])
             dp.append(len(stack))
         else:
-            lb = bisect_left(stack, nums[i])  # 找到更小的位置
+            lb = bisect_left(stack, nums[i])  # 找到大于等于nums[i]的位置
 	        dp.append(lb+1)
             stack[lb] = nums[i]
     return len(stack)
@@ -13355,7 +13607,7 @@ def solve(n, k):
         # 从 1 到 k 个台阶开始尝试
         for i in range(1, k+1):
 	        # _solve(n-1, i-1) 摔碎了一个鸡蛋，用剩下的n-1个鸡蛋测试比 i 小的台阶
-	        # 没摔碎，用n个鸡蛋测试比 i 大的台阶
+	        # 没摔碎，用n个鸡蛋测试比 i 大的台阶，即 k - i 个台阶
             cnt = min(cnt, 1 + max(_solve(n-1, i-1), _solve(n, k-i)))
         return cnt
     res = _solve(n, k,)
@@ -13659,9 +13911,9 @@ def rob(root: Optional[TreeNode]) -> int:
 
 有如下结论：
 
-选择`o`节点时的最大权值和等于不选择 `l` 和 `r` 节点时的最大权值和  `f(o) = g(l)+g(r)`  
+选择 `o` 节点时的最大权值和等于不选择 `l` 和 `r` 节点时的最大权值和  `f(o) = g(l)+g(r)`  
 
-不选择`o`节点时的最大权值和等于是否选择 `l` 和 `r` 节点时的最大权值和：
+不选择 `o` 节点时的最大权值和等于是否选择 `l` 和 `r` 节点时的最大权值和：
 
 `g(o)=max(f(l), g(l))+max(f(r),g(r))`
 
@@ -13953,6 +14205,62 @@ def countPalindromicSubsequences(s: str) -> int:
 ```
 
 
+### 戳气球
+
+[312. 戳气球 - 力扣（LeetCode）](https://leetcode.cn/problems/burst-balloons/)
+
+有 `n` 个气球，编号为`0` 到 `n - 1`，每个气球上都标有一个数字，这些数字存在数组 `nums` 中。
+
+现在要求你戳破所有的气球。戳破第 `i` 个气球，你可以获得 `nums[i - 1] * nums[i] * nums[i + 1]` 枚硬币。 这里的 `i - 1` 和 `i + 1` 代表和 `i` 相邻的两个气球的序号。如果 `i - 1`或 `i + 1` 超出了数组的边界，那么就当它是一个数字为 `1` 的气球。
+
+求所能获得硬币的最大数量。
+
+该问题可以换一种思路思考，如果是戳气球，那么戳完气球后，顺序会发生变化，导致难以处理。因此，可以将戳气球改为放气球，最开始位置上没有气球，每次放一个气球，放上一个气球后，会将原本的区间分成左右两部分，如果一个部分还能继续放就对这个部分进行求解
+
+
+```python
+def maxCoins(nums: List[int]):
+	n = len(nums)
+	ans = [0]
+	vals = [1] + nums + [1]    # 两端补1
+	def dfs(left, right):
+		if left >= right - 1:  # 区间不足以再放气球了
+			return 0
+		if memo[left][right] != -1:
+			return memo[left][right]
+		
+		best = 0
+		for i in range(left+1, right):
+			total = vals[left] * vals[i] * vals[right]
+			total += dfs(left, i) + dfs(i, right)  # 求解左右区间
+			best = max(best, total)
+		memo[left][right] = best
+		return best
+	memo = [[-1 for i in range(n+2)] for i in range(n+2)]
+	return dfs(0, n+1)
+```
+
+动态规划的方法解决，令 `dp[i][j]` 为在 `(i,j)` 开区间内放气球的最大收益
+
+```python
+def maxCoins(nums: List[int]) -> int:
+	n = len(nums)
+	ans = [0]
+	vals = [1] + nums + [1]    # 两端补1
+	
+	dp = [[0 for i in range(n+2)] for i in range(n+2)]
+
+	for i in range(n-1, -1, -1):   # 左端点从n-1到0
+		for j in range(i+1, n+2):
+			for k in range(i+1, j):  # 在 (i, j) 中放气球
+				nr = vals[k] * vals[i]* vals[j]
+				dp[i][j] = max(dp[i][j], nr + dp[i][k] + dp[k][j])
+
+	return dp[0][n+1]
+```
+
+
+
 ## 分治
 
 将长数据分成两部分进行计算
@@ -14083,15 +14391,16 @@ while i < len(left) and j >= 0:
 
 [The Skyline Problem | Set-1 - GeeksforGeeks](https://www.geeksforgeeks.org/the-skyline-problem-using-divide-and-conquer-algorithm/)
 
-采用类似归并算法思路，两两分组最终得到一个元素，该元素对应的两个天际线，分别为 (起点，高度) 和 (终点，0)，然后再合并
+[218. 天际线问题 - 力扣（LeetCode）](https://leetcode.cn/problems/the-skyline-problem/description/)
 
+采用类似归并算法思路，两两分组最终得到一个元素，该元素对应的两个天际线，分别为 (起点，高度) 和 (终点，0)，然后再合并。合并时用两个变量保存两部分当前的高度，每次保存最大值。这样得到结果会存在重复，最后进行删除
 
 ```python
 def solve(arr):
     n = len(arr)
 
     def merge(sky1, sky2):
-        i,j, h1, h2 = 0, 0, 0,0 
+        i,j, h1, h2 = 0, 0, 0, 0   # h1保存sky1当前高度，h2保存sky2当前高度
         n1, n2 = len(sky1), len(sky2)
         res = []
         while i < n1 and j < n2:
@@ -14100,6 +14409,12 @@ def solve(arr):
                 maxh = max(h1, h2)
                 res.append((l1, maxh))
                 i += 1
+            elif sky1[i][0] == sky2[j][0]:   # 处理两个端点相等时的情况
+				h1, h2 = sky1[i][1], sky2[j][1]
+				h = max(sky1[i][1], sky2[j][1])
+				res.append([sky1[i][0], h])
+				i += 1
+				j += 1
             else:
                 l2, h2 = sky2[j]
                 maxh = max(h1, h2)
@@ -14179,6 +14494,55 @@ def solve(arr, k):
             low = mid + 1
     return res
 ```
+
+
+### 至少有k个重复字符的最长子串
+
+[395. 至少有 K 个重复字符的最长子串 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-substring-with-at-least-k-repeating-characters/description/)
+
+给你一个字符串 `s` 和一个整数 `k` ，请你找出 `s` 中的最长子串， 要求该子串中的每一字符出现次数都不少于 `k` 。返回这一子串的长度。如果不存在这样的子字符串，则返回 0。
+
+对于一个字符串如果存在一个字符 ch，其出现次数大于0且小于k，则任何包含该字符的子串都不可能满足要求。也就是说，我们将字符串按照 、 切分成若干段，则满足要求的最长子串一定出现在某个被切分的段内，而不能跨越一个或多个段。因此，可以考虑分治的方式求解本题。
+
+```python
+def longestSubstring(s: str, k: int) -> int:
+	def dfs(s, l, r, k):
+		cnt = dict(Counter(s[l:r+1]))
+		split = None
+		# 找到分割字符 split
+		for key, val in cnt.items():
+			if val > 0 and val < k:
+				split = key
+				break
+		if split is None:
+			return r - l + 1
+		
+		i = l
+		max_len = 0
+		while i <= r:
+			while i <= r and s[i] == split:
+				i += 1
+			
+			# 如果全是split
+			if i > r: break
+			start = i
+			# 找到不等于split的地方
+			while i <= r and s[i] != split:
+				i += 1
+			
+			length = dfs(s, start, i - 1, k)
+			max_len = max(max_len, length)
+		return max_len
+	n = len(s)
+	return dfs(s, 0, n-1, k)
+```
+
+
+### 为运算表达式设计优先级
+
+[241. 为运算表达式设计优先级 - 力扣（LeetCode）](https://leetcode.cn/problems/different-ways-to-add-parentheses/solutions/)
+
+
 
 
 ## 分支定界
