--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -504,6 +504,8 @@ def smallestSubWithSum(x, arr):
 
 [Surpasser Count of Each Element in Array - GeeksforGeeks](https://www.geeksforgeeks.org/find-surpasser-count-of-each-element-in-array/)
 
+[315. 计算右侧小于当前元素的个数 - 力扣（LeetCode）](https://leetcode.cn/problems/count-of-smaller-numbers-after-self/description/)
+
 给定一个包含不同元素的数组，找到数组中在右侧大于自己的数（Surpasser）（$i< j$ 并且 $a[i]<a[j]$），并统计数量。
 
 使用合并排序的思路进行求解
@@ -10407,6 +10409,60 @@ def getPermutation(n: int, k: int) -> str:
 [336. 回文对 - 力扣（LeetCode）](https://leetcode.cn/problems/palindrome-pairs/solutions/2347656/you-yu-suo-you-ti-jie-yi-ti-san-jie-qian-2sur/)
 
 [336. 回文对 - 力扣（LeetCode）](https://leetcode.cn/problems/palindrome-pairs/solutions/45018/java-trie-yi-yu-li-jie-by-copyreadmachine/)
+
+
+### 最小高度树
+
+[310. 最小高度树 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-height-trees/)
+
+选择树中任何一个节点作为根。当选择节点 `x` 作为根节点时，设结果树的高度为 `h` 。在所有可能的树中，具有最小高度的树（即，`min(h)`）被称为 **最小高度树** 。找到所有的 **最小高度树** 并按 **任意顺序** 返回它们的根节点标签列表。
+
+如果采用暴力解法（BFS会超时，记忆化DFS会超空间）。考虑如下的解法假设 `[x,y]` 是树中最长路径 `maxdist` 对应的端点，那么最短路径肯定在最长路径中，并且最小高度为  $\left\lceil {{{maxdist} \over 2}} \right\rceil$
+
+因此如果最长路径为偶数，则最小高度树的根节点为 `m/2` 或者 `m/2+1`，最小高度为 `m/2`
+
+如果最长路径为奇数，则最小高度树的根节点为 `(m+1)/2`，最小高度为 `(m-1)/2`
+
+找到最长路径的算法为：先从任一点p出发，利用广度优先搜索或者深度优先搜索找到以p点为起点的最长路径的终点 x；以节点 x 出发，找到以 x 为起点的最长路径的终点 y，x 和 y 之间的路径为最长路径。
+
+```python
+def findMinHeightTrees(n: int, edges: List[List[int]]):
+	adj = [[] for i in range(n)]
+	for e in edges:
+		adj[e[0]].append(e[1])
+		adj[e[1]].append(e[0])
+	
+	parents = [0] * n
+
+	def bfs(start):
+		vis = [False] * n
+		vis[start] = True
+
+		q = deque()
+		q.append(start)
+		while q:
+			x = q.popleft()
+			for u in adj[x]:
+				if not vis[u]:
+					vis[u] = True
+					parents[u] = x
+					q.append(u)
+		return x   # x 为最后出现的节点
+
+	x = bfs(0)
+	y = bfs(x)
+	path = []
+	parents[x] = -1
+	while y != -1:  # 找到路径
+		path.append(y)
+		y = parents[y]
+	m = len(path)
+	if m & 1:
+		return [path[m // 2]]
+	else:
+		return [path[m // 2], path[m // 2 - 1]]
+```
+
 
 
 ## 堆
