--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -198,13 +198,12 @@ def rand10():
 ```
 
 
-
 ### 丑数Ⅱ
 
 [264. 丑数 II - 力扣（LeetCode）](https://leetcode.cn/problems/ugly-number-ii/description/)
 
 
-丑数指质因子只包含2、3和5的正整数，求出第 n 个质因子
+丑数指质因子只包含2、3和5的正整数，求出第 n 个丑数
 
 第一种方法可以使用最小堆+哈希表（去重），每次弹出最小值，乘上 2、3和 5再塞回去。
 
@@ -261,7 +260,7 @@ def nthUglyNumber(n: int) -> int:
 
 如果 `n'<100`，百分位上不会有1；`100≤n'<200`时，百分位上会出现 `n'-100+1` 次 1；否则会出现 100 次 1。可以表示为 `min(max(n'-100+1, 0), 100)`
 
-假设求第k位上的 1 的次数，则可以表示为（百位 k=2）
+假设求第 k 位上的 1 的次数，则可以表示为（百位 k=2）
 
 $$
 \left\lfloor {{n \over {{{10}^{k + 1}}}}} \right\rfloor  \times {10^k} + \min \left( {\max \left( {n\;\bmod \;{{10}^{k + 1}} - 10^k + 1}, 0 \right),10^k} \right)
@@ -331,7 +330,6 @@ def countDigitOne(n: int) -> int:
 如计算DFT时，事先将旋转因子$W_N^{kn}$计算好，对于长度为 N 的DFT，查找表需要存储 N 个复数（$W_N^0$，$W_N^1$，...，$W_N^{N-1}$）
 
 
-
 ```python
 def countSetBits(n):
     count = 0
@@ -384,20 +382,20 @@ for i in range(n):
 
 ## 数学问题
 
-程序很简单，思想比较复杂
+程序一般比较简单，思路比较复杂
 
 ### Nim 游戏
 
 [292. Nim 游戏 - 力扣（LeetCode）](https://leetcode.cn/problems/nim-game/description/)
 
 - 桌子上有一堆石头。
-- 你们轮流进行自己的回合， **你作为先手** 。
+- 你们轮流进行自己的回合，**你作为先手** 。
 - 每一回合，轮到的人拿掉 1 - 3 块石头。
 - 拿掉最后一块石头的人就是获胜者。
 
 假设你们每一步都是最优解。请编写一个函数，来判断你是否可以在给定石头数量为 `n` 的情况下赢得游戏。如果可以赢，返回 `true`；否则，返回 `false` 。
 
-这个问题可以这样思考如果 n 为 4，那么肯定是赢不了的，因为最后都会剩下来1-3个。所以如果 n 为 4 的倍数的话，那么就会只要你先手，对方可以将n始终维持在 4 的倍数，这样对方肯定能赢。如果不是 4 的倍数，那么只要你先手将其变成 4 的倍数，然后问题就转为对方先手，n 为 4 的倍数了。
+这个问题可以这样思考：如果 n 为 4，那么肯定是赢不了的，因为最后都会剩下来1到3个。所以如果 n 为 4 的倍数的话，那么只要你先手，对方可以将 n 始终维持在 4 的倍数，这样对方肯定能赢。如果不是 4 的倍数，那么只要你先手将其变成 4 的倍数，然后问题就转为对方先手，n 为 4 的倍数了。
 
 ```python
 def canWinNim(n: int):
@@ -415,7 +413,7 @@ def canWinNim(n: int):
 
 **一个编号为 x 的灯泡经过 n 轮后处于打开状态的充要条件为「该灯泡被切换状态次数为奇数次」。**
 
-一个灯泡切换状态的次数为其约数的个数（约数为因数，如10的约数为 1、2、5、10）。于是问题转换为：**在 `[1,n]` 内有多少个数，其约数的个数为奇数**。这些约数个数为奇数的灯泡就是最后亮着的灯泡。根据约数的定义，如果 k 为 x 的约数，那么 `x / k` 也是约数，即会成对出现，只有完全平方数才能保证有奇数个约数。根据数论，`[1, n]` 中包含了 $\left\lfloor {\sqrt n } \right\rfloor$，所有最后亮的灯泡数量为 $\left\lfloor {\sqrt n } \right\rfloor$
+一个灯泡切换状态的次数为其约数的个数（约数为因数，如10的约数为 1、2、5、10）。于是问题转换为：**在 `[1,n]` 内有多少个数，其约数的个数为奇数**。这些约数个数为奇数的灯泡就是最后亮着的灯泡。根据约数的定义，如果 k 为 x 的约数，那么 `x / k` 也是约数，即会成对出现，只有完全平方数才能保证有奇数个约数。根据数论，`[1, n]` 中包含了 $\left\lfloor {\sqrt n } \right\rfloor$ 个完全平方数，所有最后亮的灯泡数量为 $\left\lfloor {\sqrt n } \right\rfloor$
 
 ```python
 def bulbSwitch(n: int) -> int:
@@ -462,7 +460,7 @@ def isSelfCrossing(d) -> bool:
 数组中存储了数据（C/C++等）或者索引（Python，JS等），数组是连续地址，可以在常数时间完成随机访问
 
 
-### 第k个最大和连续子序列
+### 第 k 个最大和连续子序列
 
 [K-th Largest Sum Contiguous Subarray - GeeksforGeeks](https://www.geeksforgeeks.org/k-th-largest-sum-contiguous-subarray/)
 
@@ -496,7 +494,6 @@ def kthLargestSum(arr, N, K):
                 if Q[0] < x:
                     heapq.heappop(Q)
                     heapq.heappush(Q, x)
-
     return Q[0]
 ```
 
@@ -505,9 +502,9 @@ def kthLargestSum(arr, N, K):
 
 [Smallest subarray with sum greater than a given value - GeeksforGeeks](https://www.geeksforgeeks.org/minimum-length-subarray-sum-greater-given-value/)
 
-该问题可以先求前缀和，然后遍历前缀和，使用二分搜索搜索符合要求的值
+该问题可以先求前缀和，然后遍历前缀和，使用二分搜索在前缀和数组中搜索符合要求的前缀和
 
-一种更简单的方法为使用双指针，找到一个子序列，使其和大于某一个值，并且要求这个子序列长度最小。该序列所有值大于等于0。
+如果数组中所有元素都大于0，有一种更简单的方法：使用双指针，找到一个子序列，使其和大于某一个值，然后缩小左边界使得这个子序列长度最小。
 
 ```python
 def smallestSubWithSum(x, arr):
@@ -576,9 +573,7 @@ def smallestSubWithSum(x, arr):
 
 给定一个包含不同元素的数组，找到数组中在右侧大于自己的数（Surpasser）（$i< j$ 并且 $a[i]<a[j]$），并统计数量。
 
-使用合并排序的思路进行求解
-
-在合并排序中，需要将数组连续二等分，连续分到最后，只有一个值。由于数组中包含的是不同的元素，可以用一个字典保存各个元素的Surpasser的数量。在合并的时候，只需要考虑左侧数组，因为左侧数组在原数组的位置在右侧数组之前，如果左侧数组中的元素小于右侧数组中的某个值，那么之后的全都小于。
+使用合并排序的思路进行求解，在合并排序中，需要将数组连续二等分，连续分到最后，只有一个值。由于数组中包含的是不同的元素，可以用一个字典保存各个元素的Surpasser的数量。在合并的时候，只需要考虑左侧数组，因为左侧数组在原数组的位置在右侧数组之前，如果左侧数组中的元素小于右侧数组中的某个值，那么之后的全都小于。
 
 ```python
 def merge(arr, lo, mid, hi, m):
@@ -640,12 +635,62 @@ def findSurpasser(arr):
 
 > 如果是统计右侧小于自己的数，可以改成从大到小排
 
-> 如果数组中包含重复元素，那么还需要有一个指数数组，或者更简单的，将数组改成 (num,  i) 这种形式，如下所示
+> 如果数组中包含重复元素，那么还需要有一个索引数组，或者更简单的，将数组改成 (num,  i) 这种形式，如下所示
 
 ```python
 for i, a in enumerate(arr):
 	m[(a, i)] = 0
 	dup.append((a, i))
+```
+
+
+使用索引数组的方法如下，用索引代表元素，在合并时，无需额外开辟空间保存结果，只要先保存之前的索引，再对索引进行赋值即可。
+
+```python
+def countSmaller(nums: List[int]):
+	n = len(nums)
+
+	smaller = [0] * n
+
+	indexs = [0] * n
+	cindexs = [0] * n
+	for i in range(n):
+		indexs[i] = i
+
+	def split(l, r):
+		if l >= r:
+			return
+		
+		mid = l + (r - l) // 2
+
+		split(l, mid)
+		split(mid+1, r)
+
+		merge(nums, l, mid, r)
+	
+	def merge(nums, l, mid, r):
+		for i in range(l, r+1):
+			cindexs[i] = indexs[i]
+			
+		i, j = l, mid+1
+		for k in range(l, r+1):
+			if i > mid:
+				indexs[k] = cindexs[j]
+				j += 1
+			elif j > r:
+				indexs[k] = cindexs[i]
+				i += 1
+			else:
+				if nums[cindexs[i]] <= nums[cindexs[j]]:
+					indexs[k] = cindexs[j]
+					j += 1
+				else:
+					indexs[k] = cindexs[i]
+					smaller[cindexs[i]] += r - j + 1
+					i += 1
+
+	split(0, n-1)
+	return smaller
 ```
 
 
@@ -731,7 +776,7 @@ def getMedian(arr):
 
 两个等长的数组分别给出左端点和右端点，求出这些范围内最常出现的整数
 
-使用 difference 数组求解：定义一个 `diff` 数组，`diff[left] += 1`，对应的 `diff[right+1] -=1`，这样 `diff` 中大于0的表示这里有多少个起点，小于0表示这里有多少个终点，求前缀和时最大值的位置即代表最常出现的数。
+使用 difference 数组求解：定义一个 `diff` 数组，遍历左右端点，左端点`diff[left] += 1`，右端点 `diff[right+1] -=1`，这样 `diff` 中大于0的表示这里有多少个起点，小于0表示这里有多少个终点，求前缀和时最大值的位置即代表最常出现的数。
 
 ```python
 MAX = 1000
@@ -741,7 +786,7 @@ def maximumOccurredElement(L, R, n):
     # 初始化 diff 数组
     arr = [0 for i in range(MAX)]
  
-    # 左侧端点加1，右侧端点减1
+    # 左侧端点加 1，右侧端点减 1
     for i in range(n):
         arr[L[i]] += 1
         arr[R[i] + 1] -= 1
@@ -817,7 +862,7 @@ class Solution:
         return profit
 ```
 
-这样时间复杂度过高
+这样时间复杂度比较高
 
 另一种方法考虑到最多进行两次交易，因此可以分成两段，即从 0 到 i 进行一次交易，从 i 到 n-1进行一次交易。先计算 0 到 i 的交易所能获取的利润最大值，如果历史最低价格小于当前价格，那么可以选择卖或者不卖
 
@@ -833,12 +878,12 @@ def maxProfit(arr):
 			# 选择卖或者不卖
 			profits[i] = max(profits[i-1], arr[i] - minP) 
 			profit = max(profit, profits[i])
-		else: # 当前价格较低，不卖，
+		else: # 当前价格较低，不卖
 			minP = arr[i]
 			profits[i] = profits[i - 1]
 	
 	maxP = arr[-1]
-	# 计算从 n-1 到i的利润最大值
+	# 计算从 n-1 到 i 的利润最大值
 	for j in range(len(arr) - 2, -1, -1):
 		if maxP > arr[j]:
 			profit = max(profit, maxP - arr[j] + profits[j])  
@@ -1162,7 +1207,7 @@ def findDuplicate(nums: List[int]) -> int:
 		cnt = 0
 		for i in range(n):
 			cnt += nums[i] <= mid
-		if cnt <= mid:  # 计数小于mid，证明重复数在右半部分
+		if cnt <= mid:  # 计数小于等于mid，证明左半部分要么连续递增，要么存在缺失数
 			low = mid + 1
 		else:
 			high = mid - 1
@@ -1272,7 +1317,7 @@ def removeDuplicates(nums: List[int], k) -> int:
 
 由于存在数据的更新，每一次更新都需要更新前缀和，使得前缀和无法简化操作。
 
-可以考虑将数组分块，如果分成 $\sqrt{n}$ 个块，每次更新时只更新某个块的前缀和，这样做无论是初始化、更新还是求和，都会比较麻烦。因此可以直接对每一块求和，这样在更新时只需更新一个数，在求和时也只要考虑两端的求和，比较方便，并且节约空间。
+可以考虑将数组分块，如果分成 $\sqrt{n}$ 个块，每次更新时只更新某个块的前缀和，这样做无论是初始化、更新还是求和，都会比较麻烦。因此可以直接对每一块求和，这样在更新时只需更新一个块的和，在求和时也只要考虑两端的求和，比较方便，并且节约空间。
 
 ```python
 class NumArray:
@@ -1354,8 +1399,8 @@ class NumArray:
         if left > m:
             return self.range(left, right, node * 2 + 2, m+1, e)
         
-        return self.range(left, m, node * 2 + 1, s, m) + self.range(m+1, right, node*2+2, m+1, e)
-
+        return self.range(left, m, node*2 + 1, s, m) + \
+               self.range(m+1, right, node*2+2, m+1, e)
 
     def update(self, index: int, val: int) -> None:
         self.change(index, val, 0, 0, self.n - 1)
@@ -1427,7 +1472,7 @@ def countPairs(arr, target):
 这里的频率更新需要放在计数之后，放在前面则会导致如果 `arr[i]`和 `target-arr[i]` 相等会导致同一个位置相加。
 
 
->该问题还可以延申至矩阵中，将矩阵中的所有值用hashmap保存下来，然后对每个值判断其补值是否在hashmap中
+>该问题还可以延申至矩阵中，将矩阵中的所有值用hashmap保存下来，然后对每个值判断其差值是否在hashmap中
 
 ### 三数之和
 
@@ -1657,7 +1702,7 @@ def subarraySum(arr, target):
 
 [128. 最长连续序列 - 力扣（LeetCode）](https://leetcode.cn/problems/longest-consecutive-sequence/)
 
-求一个数组中数字连续最长的序列，不要求原本的位置连续
+求一个数组中数字连续最长的序列，该序列不要求位置相邻
 
 使用哈希表存储所有的数字，对于每个数字只有在其下一个数存在时，才会计数加1，这里有一个注意的地方，为了保证时间复杂度为 `O(n)`，只会在连续序列的头部进行内部循环
 
@@ -1682,9 +1727,11 @@ def longestConsecutive(nums) -> int:
 
 [Find all pairs (a, b) in an array such that a % b = k - GeeksforGeeks](https://www.geeksforgeeks.org/find-pairs-b-array-b-k/)
 
+在一个数组中找到所有的序列对(a,b)使得 a%b = k
+
 分成两种情况，这两种情况可以同时存在
 
-+ 如果 k 在数组中，并且存在比k大的数，那么存在一个序列对
++ 如果 k 在数组中，并且存在比 k 大的数，那么存在一个序列对
 + 如果一个数大于k，进行如下分析
 $$
 \eqalign{
@@ -2242,7 +2289,7 @@ def ternarySearch(l, r, key, ar):
 2、用最大堆保存K个数，时间复杂度为 nlog(K)，空间复杂度为 K
 3、快速选择算法，虽然最差情况下时间复杂度为 $n^2$，但是实践使用时是快的。
 
-快速选择算法基于快速排序算法，partition的部分一致，只是在后续搜索时有差别，当找到pivot的位置时，比较该位置左侧是否包含了k-1个数，如果包含了，那么pivot就是需要的数，如果左侧大于k-1个数，就在左侧找，否则在右侧找。
+快速选择算法基于快速排序算法，partition的部分一致，只是在后续搜索时有差别，当找到 pivot 的位置时，比较该位置左侧是否包含了k-1个数，如果包含了，那么 pivot 就是需要的数，如果左侧大于 k-1 个数，就在左侧找，否则在右侧找。
 
 ```python
 def partition(arr, l, r):
@@ -2290,6 +2337,7 @@ def kthSmallest(arr, l, r, k):
 
 给定一个升序排列的整数数组，找到一个 n 使得 n 个数字大于等于 n，使用二分查找解决这个问题
 
+由于本题的实际范围为 `[0, n]`，为了避免数组越界，将左右设置为 `0` 和 `n-1`，最终的答案为 `n-mid`
 
 ```python
 def hIndex(citations) -> int:
@@ -2300,13 +2348,33 @@ def hIndex(citations) -> int:
 	while left <= right:
 		mid = left + (right - left) // 2
 
-		if citations[mid] >= n - mid:
+		if citations[mid] >= n-mid: # 如果mid处的引用数大于n-mid，证明结果至少为n-mid
 			right = mid - 1
 			ans = n - mid
 		else:
 			left = mid + 1
 	return ans
 ```
+
+另一种方法为直接搜索h-index，由h-index的定义可知，h-index最大为n，将左右设置为 `1` 和 `n`，数组访问时为 `mid-1`，这样不会越界，但是要初始设置结果为0，这样可以返回0这个答案
+
+```python
+def hIndex(citations):
+	n = len(citations)
+	left, right = 1, n
+
+	ans = 0
+	while left <= right:
+		mid = left + (right - left) // 2
+		
+		if citations[n - mid] >= mid:
+			ans = mid
+			left = mid + 1
+		else:
+			right = mid - 1
+	return ans
+```
+
 
 ### 在旋转后的排序数组中搜索
 
@@ -2353,26 +2421,23 @@ def search(arr: List[int], target: int) -> int:
 
 [153. 寻找旋转排序数组中的最小值 - 力扣（LeetCode）](https://leetcode.cn/problems/find-minimum-in-rotated-sorted-array/description/)
 
-如果 `arr[mid]>arr[r]` 证明右半部分出现了乱序，那么最小值在右半部分，设置 `l=mid+1`，反之在左半部分，为了避免 mid 指向的就是最小值所以设置 `h = mid`
+如果 `nums[mid] > nums[r]` 证明右半部分出现了乱序，那么最小值在右半部分，设置 `l=mid+1`，反之在左半部分
 
 ```python
 def findMin(nums):
 	n = len(nums)
-	l, r = 0, n - 1
-	while l <= r:
-		if l == r:
-			return nums[l]
-		if r == l + 1:
-			return min(nums[l], nums[r])
-		
-		mid = l + (r - l) // 2
+	left, right = 0, n - 1
+	ans = nums[0]
+	while left <= right:
+		mid = left + (right - left) // 2
 
-		if nums[mid] > nums[r]:
-			l = mid + 1
+		if nums[mid] > nums[right]:  # 右边出现乱序，最小值在右边
+			left = mid + 1
 		else:
-			r = mid
+			ans = min(ans, nums[mid])  # 更新最小值
+			right = mid - 1
+	return ans
 ```
-
 
 ### 在三个排好序的数组中找到最相近的数
 
@@ -2567,7 +2632,7 @@ def containsNearbyAlmostDuplicate(nums, indexDiff: int, valueDiff: int):
 	# 将元素分到对应的桶内
 	def getId(num, w):
 		return num // w
-		# else: return ((num + 1) / w) - 1  # 对于 C/C++等语言
+		# else: return ((num + 1) / w) - 1  # 对于 C/C++ 等语言
 	
 	w = valueDiff + 1  # 桶的大小
 
@@ -2594,6 +2659,19 @@ def containsNearbyAlmostDuplicate(nums, indexDiff: int, valueDiff: int):
 
 ### 排序方法
 
+
+| 排序算法 | 最好时间复杂度    | 平均时间复杂度            | 最坏时间复杂度    | 空间复杂度    | 稳定性 | 备注                 |
+| ---- | ---------- | ------------------ | ---------- | -------- | --- | ------------------ |
+| 冒泡排序 | O(n)       | O(n²)              | O(n²)      | O(1)     | ✅   | 最好情况是已排序           |
+| 选择排序 | O(n²)      | O(n²)              | O(n²)      | O(1)     | ❌   | 每轮选择最小值            |
+| 插入排序 | O(n)       | O(n²)              | O(n²)      | O(1)     | ✅   | 部分有序效果好            |
+| 希尔排序 | O(n log n) | O(n^1.3) ~O(n^1.5) | O(n²)      | O(1)     | ❌   | 不稳定的插入排序改进         |
+| 归并排序 | O(n log n) | O(n log n)         | O(n log n) | O(n)     | ✅   | 需要额外空间，适合链表        |
+| 快速排序 | O(n log n) | O(n log n)         | O(n²)      | O(log n) | ❌   | 最常用，递归优化可避免最坏情况    |
+| 堆排序  | O(n log n) | O(n log n)         | O(n log n) | O(1)     | ❌   | 基于堆结构的选择排序         |
+| 计数排序 | O(n + k)   | O(n + k)           | O(n + k)   | O(k)     | ✅   | 适用于整数、小范围数据        |
+| 桶排序  | O(n + k)   | O(n + k)           | O(n²)      | O(n + k) | ✅   | 分布均匀效果好            |
+| 基数排序 | O(nk)      | O(nk)              | O(nk)      | O(n + k) | ✅   | k 是最大位数，适合定长整数或字符串 |
 
 #### 选择排序
 
@@ -2701,7 +2779,7 @@ def heapSort(arr):
 
 具体排列方法如下：首先选定一个pivot，一般选定子数组的左端，该位置记为index，另外分别从子数组的左端（记为left）和右端（记为right）向中间进发，先从右端开始。
 
-从右端开始遍历，如果`arr[right]` 比 pivot 大，继续遍历，如果`arr[right]`小于 pivot，令`arr[index]` 等于`arr[right]`，然后将 right 这个位置记为新的 index。
+从右端开始遍历，如果`arr[right]` 比 pivot 大，继续遍历，如果 `arr[right]` 小于 pivot，令`arr[index]` 等于`arr[right]`，然后将 right 这个位置记为新的 index。
 
 右端暂时遍历完后，从左端开始遍历，同样的如果`arr[left]` 大于 pivot，令 `arr[index]` 等于 `arr[left]`，然后将 left 这个位置记为新的 index。
 
@@ -2832,7 +2910,6 @@ def radixSort(arr):
 >基数排序可以用于解决计数排序面对数字范围过大时的问题
 
 
-
 #### 桶排序
 
 比较适用于分布均匀的数组，将数组分在若干个桶内，对于每个桶内的数据进行排序，再将桶内的数据排在一起。
@@ -2893,10 +2970,60 @@ def sortColors(nums: List[int]):
 		elif nums[i] == 0:
 			nums[i], nums[p0] = nums[p0], nums[i]
 			if p0 < p1:  # 将 1 交换出去了，现在要交换回来
-				nums[i], nums[p1] = nums[p1], nums[i]
+				nums[i], nums[p1] = nums[p1], nums[i]  # nums[i] 为交换出去的1
 			p0 += 1
 			p1 += 1
 ```
+
+
+### 煎饼排序
+
+[969. 煎饼排序 - 力扣（LeetCode）](https://leetcode.cn/problems/pancake-sorting/description/)
+
+给你一个整数数组 `arr` ，请使用 **煎饼翻转** 完成对数组的排序。
+
+一次煎饼翻转的执行过程如下：
+
+- 选择一个整数 `k` ，`1 <= k <= arr.length`
+- 反转子数组 `arr[0...k-1]`（**下标从 0 开始**）
+
+注意求解该问题的最少翻转操作是NP难问题，但是如果只是求一个可行的翻转操作不是太难
+
+可以采用递归的方法，首先先将最大的元素翻转到最底下，然后问题就变成了n-1的问题。将最大的元素翻转到最底下有两次操作：第一次翻转最大元素对应的下标位置，将最大元素放在最上面，第二次翻转将最大元素放在已有的最大元素之上即可。
+
+```python
+def pancakeSort( arr):
+	sols = []
+	def sort(arr, n):
+		if n == 1: return 
+		maxv = arr[0]
+		maxi = 0
+		for i in range(n):
+			if maxv < arr[i]:
+				maxv = arr[i]
+				maxi = i
+		
+		# 将最大元素翻转到最上面
+		l, r = 0, maxi
+		while l < r:
+			arr[l], arr[r] = arr[r], arr[l]
+			l += 1
+			r -= 1
+		
+		# 将最大元素翻转到前一个最大元素的上面
+		l, r = 0, n-1
+		while l < r:
+			arr[l], arr[r] = arr[r], arr[l]
+			l += 1
+			r -= 1
+			
+		sols.append(maxi+1)
+		sols.append(n)
+		sort(arr, n-1)
+	sort(arr, len(arr))
+	return sols
+```
+
 
 ### 将数组排序为波形
 
@@ -3038,7 +3165,6 @@ def minIncrements(arr):
 	return cnt
 ```
 
-
 另一种方法是使用一个频率数组记录原数组中所有元素的出现次数，然后只需要让所有元素的出现次数小于等于1即可。
 
 ```python
@@ -3069,9 +3195,9 @@ def minIncrements(arr):
 
 [453. 最小操作次数使数组元素相等 - 力扣（LeetCode）](https://leetcode.cn/problems/minimum-moves-to-equal-array-elements/description/)
 
-允许对数组中的n-1个数加1，求使所有元素相等时的最小操作次数
+允许对数组中的 n-1 个数加1，求使所有元素相等时的最小操作次数
 
-直接求不好求，时间复杂度会很高，但是如果换一个方向，对 n-1 个数加1，可以转换为对 1 个数减1，这样就变成了每次操作对一个数减1，需要多少次操作，数组中的元素全部变为最小值
+直接求不好求，时间复杂度会很高，但是如果换一个思路，对 n-1 个数加 1，可以转换为对 1 个数减 1，这样就变成了每次操作对一个数减 1，需要多少次操作，数组中的元素全部变为最小值
 
 ```python
 def minMoves(nums) -> int:
@@ -3087,14 +3213,14 @@ def minMoves(nums) -> int:
 
 还有等式可以计算，首先假设最后的目标值为 target，最后的总和为 `target * n`，为了找到最小操作次数，则每次都需要在最小值上加1，因此最小操作次数为 `target-minv`，每次操作会增加 n-1，所以最后有等式：`target*n - sum = (target - minv) * (n-1)`，即 `target = sum-(n-1)*minv`
 
-如果每次允许对一个元素加1或减1，那么使全部元素相等的最小操作次数便是将所有元素变成中位数。
+>如果每次允许对一个元素加1或减1，那么使全部元素相等的最小操作次数便是将所有元素变成中位数。
 
 
 ### 火车到达的最少平台问题
 
 https://www.geeksforgeeks.org/minimum-number-platforms-required-railwaybus-station
 
-假设有若干列火车到达某个站点，到达时间为 arr，离站时间为dep，请问该站点最少需要多少个平台
+假设有若干列火车到达某个站点，到达时间为 arr，离站时间为 dep，请问该站点最少需要多少个平台
 
 一种方法是先分别对到达时间和离站时间进行排序（不需要管是否一一对应，火车在走之前肯定会先到站），统计在每辆车来之前有多少辆车走即可
 
@@ -3116,74 +3242,6 @@ def minimumPlatform(arr,dep):
 ```
 
 另一种方法是将其转为有多少个区间重叠的问题，参考数组问题中给定范围内最常出现的整数解法。
-
-
-### 距离最近的坐标点
-
-[Closest Pair of Points using Divide and Conquer algorithm - GeeksforGeeks](https://www.geeksforgeeks.org/closest-pair-of-points-using-divide-and-conquer-algorithm/)
-
-分治算法：先按照x轴坐标对点进行排序，然后根据x轴坐标选择一个中间点，将数组分成两个部分，重复这个步骤，将数组分成大小小于3的子数组，在这些子数组中使用暴力解法求最小距离，得到左半边和右半边的最小距离 d，然后选择x轴距离中点小于d的点，再按照y轴排序，在这些点中使用暴力解法求出最小距离。
-
-```python
-import math
-
-class Point:
-    def __init__(self, x, y):
-        self.x = x
-        self.y = y
-    
-def dist(p1: Point, p2: Point):
-    return math.sqrt((p1.x - p2.x) ** 2 + (p1.y - p2.y) ** 2)
-
-def bruteForce(P, n):
-    min_dist = float("inf")
-    for i in range(n):
-        for j in range(i+1, n):
-            d = dist(P[i], P[j])
-            min_dist = min(min_dist, d)
-    return min_dist
-
-def compX(item):
-    return item.x
-
-def compY(item):
-    return item.y
-
-def stripClosest(arr, n, d):
-    min_dist = d
-    arr = sorted(arr, key=compY)
-
-    for i in range(n):
-        for j in range(i + 1, n):
-            # 减少可能的迭代次数
-            if arr[j].y - arr[i].y > min_dist:
-                break
-            if dist(arr[i], arr[j]) < min_dist:
-                min_dist = dist(arr[i], arr[j])
-    return min_dist
-
-def divide(arr, n):
-    if n <= 3:
-        return bruteForce(arr, n)
-    
-    mid = n // 2
-    dl = divide(arr[:mid], mid)
-    dr = divide(arr[mid:], n - mid)
-
-    d = min(dl, dr)
-
-    stripes = []
-    for i in range(n):
-        if abs(arr[i].x - arr[mid].x) < d:
-            stripes.append(arr[i])
-    return min(d, stripClosest(stripes, len(stripes), d))
-    
-P = [Point(x=2, y=3), Point(x=12, y=30), Point(x=40, y=50), Point(x=5, y=1), Point(x=12, y=10), Point(x=3, y=4)]
-n = len(P)
-P = sorted(P, key=compX)
-print(divide(P, n))
-```
-
 
 ### 计算交换次数
 
@@ -14911,6 +14969,74 @@ def maxCoins(nums: List[int]) -> int:
 ## 分治
 
 将长数据分成两部分进行计算
+
+
+
+### 距离最近的坐标点
+
+[Closest Pair of Points using Divide and Conquer algorithm - GeeksforGeeks](https://www.geeksforgeeks.org/closest-pair-of-points-using-divide-and-conquer-algorithm/)
+
+分治算法：先按照x轴坐标对点进行排序，然后根据x轴坐标选择一个中间点，将数组分成两个部分，重复这个步骤，将数组分成大小小于3的子数组，在这些子数组中使用暴力解法求最小距离，得到左半边和右半边的最小距离 d，然后选择x轴距离中点小于d的点，再按照y轴排序，在这些点中使用暴力解法求出最小距离。
+
+```python
+import math
+
+class Point:
+    def __init__(self, x, y):
+        self.x = x
+        self.y = y
+    
+def dist(p1: Point, p2: Point):
+    return math.sqrt((p1.x - p2.x) ** 2 + (p1.y - p2.y) ** 2)
+
+def bruteForce(P, n):
+    min_dist = float("inf")
+    for i in range(n):
+        for j in range(i+1, n):
+            d = dist(P[i], P[j])
+            min_dist = min(min_dist, d)
+    return min_dist
+
+def compX(item):
+    return item.x
+
+def compY(item):
+    return item.y
+
+def stripClosest(arr, n, d):
+    min_dist = d
+    arr = sorted(arr, key=compY)
+
+    for i in range(n):
+        for j in range(i + 1, n):
+            # 减少可能的迭代次数
+            if arr[j].y - arr[i].y > min_dist:
+                break
+            if dist(arr[i], arr[j]) < min_dist:
+                min_dist = dist(arr[i], arr[j])
+    return min_dist
+
+def divide(arr, n):
+    if n <= 3:
+        return bruteForce(arr, n)
+    
+    mid = n // 2
+    dl = divide(arr[:mid], mid)
+    dr = divide(arr[mid:], n - mid)
+
+    d = min(dl, dr)
+
+    stripes = []
+    for i in range(n):
+        if abs(arr[i].x - arr[mid].x) < d:
+            stripes.append(arr[i])
+    return min(d, stripClosest(stripes, len(stripes), d))
+    
+P = [Point(x=2, y=3), Point(x=12, y=30), Point(x=40, y=50), Point(x=5, y=1), Point(x=12, y=10), Point(x=3, y=4)]
+n = len(P)
+P = sorted(P, key=compX)
+print(divide(P, n))
+```
 
 
 ### 最大子数组和
