--- a/数据结构和算法.md
+++ b/数据结构和算法.md
@@ -3507,9 +3507,9 @@ https://www.geeksforgeeks.org/nearly-sorted-algorithm
 
 对于一个几乎排好序的序列，即每个元素位于和其应处位置的距离小于等于 k 的位置
 
-可以使用堆排序，维持一个大小为k的堆，将前k个元素放进堆里，如果第k+1个元素小于堆顶元素，那么将其放到第一个位置，否则将堆顶元素弹出，并放入第一个位置，再将第k+1个元素塞进去
+可以使用堆排序，维持一个大小为 k 的堆，将前 k 个元素放进堆里，如果第 k+1 个元素小于堆顶元素，那么将其放到第一个位置，否则将堆顶元素弹出，并放入第一个位置，再将第 k+1 个元素塞进去
 
-因为每个元素最多位于正确位置距离为k的位置，因此第k+2个元素不可能会比第1个元素还小，否则距离就是k+1了。
+因为每个元素最多位于正确位置距离为 k 的位置，因此第 k+2 个元素不可能会比第 1 个元素还小，否则距离就是 k+1 了。
 
 ```python
 def nearlySorted(self, arr, k):
@@ -3543,7 +3543,7 @@ def nearlySorted(self, arr, k):
 
 给定整数数组和整数 k，返回数组中第 k 个最大的元素
 
-如果需要设计一个时间复杂度为 `O(n)` 的算法，可以使用桶排序，由于本问题针对整数数组，因此桶的大小取1即可。
+如果需要设计一个时间复杂度为 `O(n)` 的算法，可以使用桶排序，由于本问题针对整数数组，因此桶的大小取 1 即可。
 
 ```python
 def findKthLargest(nums: List[int], k: int) -> int:
@@ -3638,7 +3638,7 @@ def sort(arr, n) :
 
 ### 无需额外空间融合两个有序列表
 
-https://www.geeksforgeeks.org/merge-two-sorted-arrays-o1-extra-space
+[Merge Two Sorted Arrays Without Extra Space | GeeksforGeeks](https://www.geeksforgeeks.org/merge-two-sorted-arrays-o1-extra-space/)
 
 给定两个有序列表，将这两个列表变成一个整体有序的列表，即一个列表只包含较小的部分值，另一个列表包含较大的部分值
 
@@ -3724,6 +3724,7 @@ def minSwap (arr, k) :
 [Count distinct occurrences as a subsequence - GeeksforGeeks](https://www.geeksforgeeks.org/count-distinct-occurrences-as-a-subsequence/)
 
 给定一个文本，计算某个模式的出现次数，如 txt = banana, pat = ban，ban 在 banana 中的出现次数为3次，分别为 `[ban]`、`[ba n]` 和 `[b an]`
+
 
 #### 自己写的解法
 
@@ -3993,38 +3994,38 @@ def findTriplet(arr):
 如果用前缀和代替这里的求和过程，时间复杂度就能降为 $O(n)$
 
 ```python
-def findMaxWater(self, arr):
-        max_units = 0
-        now_units = 0
-        
-        si = 0
-        while arr[si] == 0:
-            si += 1
-        
-        for i in range(si + 1, len(arr)):
-            if arr[i] >= arr[si]:
-                now_units = (i - si - 1) * arr[si] - sum(arr[si+1: i])
-                si = i
-                max_units += now_units
-        return max_units
-        
-    def maxWater(self, arr):
-        max_units = 0
-        max_height = max(arr)
-        max_height_index = arr.index(max_height)
-        
-        left_arr = arr[:max_height_index+1]
-        right_arr = arr[max_height_index:][::-1]
-        
-        left_units = 0
-        right_units = 0
-        
-        if len(left_arr) > 1:
-            left_units = self.findMaxWater(left_arr)
-        
-        if len(right_arr) > 1:
-            right_units = self.findMaxWater(right_arr)
-        return left_units + right_units
+def findMaxWater(arr):
+	max_units = 0
+	now_units = 0
+	
+	si = 0
+	while arr[si] == 0:
+		si += 1
+	
+	for i in range(si + 1, len(arr)):
+		if arr[i] >= arr[si]:
+			now_units = (i - si - 1) * arr[si] - sum(arr[si+1: i])
+			si = i
+			max_units += now_units
+	return max_units
+
+def maxWater(arr):
+	max_units = 0
+	max_height = max(arr)
+	max_height_index = arr.index(max_height)
+	
+	left_arr = arr[:max_height_index+1]
+	right_arr = arr[max_height_index:][::-1]
+	
+	left_units = 0
+	right_units = 0
+	
+	if len(left_arr) > 1:
+		left_units = findMaxWater(left_arr)
+	
+	if len(right_arr) > 1:
+		right_units = findMaxWater(right_arr)
+	return left_units + right_units
 ```
 
 
@@ -4294,7 +4295,7 @@ def maxSumWithK(a, n, k):
 		s += a[i] - a[i - k]
 		
 		res = max(res, s)
-		# 如果加上前面i-k的最大和，就加上前面i-k的最大和
+		# 如果加上前面i-k的最大和会更大，就加上前面i-k的最大和
 		res = max(res, s + maxSum[i-k])
 	
 	return res
@@ -4341,10 +4342,9 @@ def maxSumWithK(arr, k):
 ## 前缀和
 
 
-前缀和的大小和原数组相同，`prefixSum[i] = arr[0]+arr[1]+...+arr[i]`
+前缀和：`prefixSum[i] = arr[0]+arr[1]+...+arr[i]`
 
-从 L 到 R 的和用前缀和表达为（L 和 R 均从 1 开始计数）
-如果 L 大于1，`prefixSum[R] - prefixSum[L-1]`，否则为 `prefixSum[R]`
+从 L 到 R 的和用前缀和表达为（L 和 R 均从 1 开始计数）如果 L 大于1，`prefixSum[R] - prefixSum[L-1]`，否则为 `prefixSum[R]`
 
 前缀和可以用于产生满足一定概率分布的随机数 [Prefix Sum Array - Implementation and Applications in Competitive Programming - GeeksforGeeks](https://www.geeksforgeeks.org/prefix-sum-array-implementation-applications-competitive-programming/)
 
@@ -4628,7 +4628,6 @@ def isInterleave(s1: str, s2: str, s3: str) -> bool:
 [Permutations of given String - GeeksforGeeks](https://www.geeksforgeeks.org/write-a-c-program-to-print-all-permutations-of-a-given-string/)
 
 
-
 ![](https://media.geeksforgeeks.org/wp-content/uploads/20250106173028544574/4.webp)
 
 
@@ -4799,7 +4798,7 @@ def minCut(s: str) -> int:
 def palindromePartition(s: str, k: int) -> int:
 	n = len(s)
 	cost = [[0 for _ in range(n)] for _ in range(n)]
-	# 动态规划计算 s[i...j] 变为回文字符串时的修改次数
+	# 动态规划计算 s[i..j] 变为回文字符串时的修改次数
 	for i in range(n-1, -1, -1):
 		for j in range(i+1, n):
 			if s[i] == s[j]:
@@ -4828,7 +4827,7 @@ def palindromePartition(s: str, k: int) -> int:
 
 [2472. 不重叠回文子字符串的最大数目 - 力扣（LeetCode）](https://leetcode.cn/problems/maximum-number-of-non-overlapping-palindrome-substrings/description/)
 
-采用记忆化搜索的方法，对于一个位置，可以选择将其作为开始，或者不选择其作为开始。如果选择作为开始，则遍历长度大于等于k的字符串末端，如果找到一个可以形成回文字符串，就停止该位置的搜索。
+采用记忆化搜索的方法，对于一个位置，可以选择将其作为开始，或者不选择其作为开始。如果选择作为开始，则遍历长度大于等于 k 的字符串末端，如果找到一个可以形成回文字符串，就停止该位置的搜索。
 
 ```python
 def maxPalindromes(s: str, k: int) -> int:
@@ -5038,6 +5037,7 @@ def restoreIpAddresses(s: str) -> List[str]:
 	ans = [".".join(a) for a in ans]
 	return ans
 ```
+
 
 ### 判断一句话能否被给定词表分解
 
@@ -5405,7 +5405,7 @@ def isCircle(arr):
 
 给定一组字符串，字符串的排序顺序按照外星人字典排列，找到字符的顺序
 
-问题的关键是如何根据排序的字符串找到对应的字符之间的顺序，一种方法是枚举字符串，比较字符串之间的差距，如果字符不同，那么就可以得到字符之间的顺序
+问题的关键是如何根据排序的字符串找到对应的字符之间的顺序，一种方法是枚举字符串，比较字符串之间的差距，如果字符不同，那么就可以得到字符之间的顺序。这些顺序构成了有向边，进行拓扑排序即可
 
 ```python
 def findOrder(words):
@@ -5512,7 +5512,7 @@ def min_word_break(s, dict):
     dp[0] = 0  # 空字符串无需分解
 
     for i in range(1, n + 1):
-        for word in dict:
+        for word in dict:     # 遍历所有的单词
             length = len(word)
             if i >= length and s[i - length:i] == word:
                 # 检查 s[i - length:i] 是否和单词相等，如果相等更新
@@ -5848,7 +5848,6 @@ def solve_dp(arr, k):
             else:
                 dp[curr] = min(dp[curr], 0)
     return dp[0]
-
 ```
 
 
@@ -6170,19 +6169,11 @@ def permuteUnique(nums):
 
 
 ```python
-def reverse_queue(queue: Queue):
-    if queue.empty():
-        return
- 
-    # 元素出队列
-    item = queue.queue[0]
-    queue.get()
- 
-    # 翻转剩余队列
-    reverse_queue(queue)
- 
-    # 元素入队列
-    queue.put(item)
+def reverse_queue(queue: deque):
+    if queue:
+        x = queue.popleft()     # 出队列
+        reverse_queue(queue)
+        queue.append(x)     # 入队列
 ```
 
 
@@ -6206,7 +6197,7 @@ def countRecur(coins, n, sum):
 
     # 分成是否选择该硬币两种情况
     return countRecur(coins, n, sum - coins[n - 1]) + \
-              countRecur(coins, n - 1, sum)
+              countRecur(coins, n - 1, sum)   # 不选择该硬币，还剩n-1个硬币可选
 
 def count(coins, sum):
     return countRecur(coins, len(coins), sum)
@@ -6262,36 +6253,6 @@ def longestPalindromic(strn, l, r, count):
 
 >用count传入信息时，似乎不能简单的使用memo来简化操作
 
-### 二叉树的底部视图
-
-[Bottom View of a Binary Tree - GeeksforGeeks](https://www.geeksforgeeks.org/bottom-view-binary-tree/)
-
-二叉树的底部视图指从底部向上看能看到的节点，这里需要考虑每个节点的水平位置，水平位置相等并且处于同一层的选择层次遍历时后遍历到的节点
-
-使用层次遍历，遍历时记住每个节点对应的水平位置，即左子树是根节点的水平位置减1，右子树则是加1。
-
-```python
-def bottomView(root):
-	from collections import deque, defaultdict
-	queue = deque()
-	# 根节点的水平位置为0
-	queue.append((root, 0))
-	
-	hd_map = defaultdict(int)        
-	while queue:
-		node, hd = queue.popleft()
-		
-		# 更新hd对应的值
-		hd_map[hd] = node.data
-		
-		if node.left is not None:
-			queue.append((node.left, hd-1))
-		if node.right is not None:
-			queue.append((node.right, hd+1))
-	
-	res = [hd_map[hd] for hd in sorted(hd_map)]
-	return res
-```
 
 
 ### 生成数组的全部子集
@@ -6432,6 +6393,7 @@ def findAllPossiblePaths(n : int, m : int, grid):
 	get_all_possible_paths(grid, n, m, 0, 0, path, sols)
 	return sols
 ```
+
 
 ### 生成平衡括号
 
@@ -6768,7 +6730,8 @@ def mul(self, res, mat, m):
 	for i in range(3):
 		for j in range(3):
 			for k in range(3):
-				res1[i][j] += (res[i][k]*mat[k][j]) # Multiplying matrices element-wise and summing
+				# Multiplying matrices element-wise and summing
+				res1[i][j] += (res[i][k]*mat[k][j]) 
 				res1[i][j] %= m # Taking modulo m to avoid overflow
 	
 	for i in range(3):
@@ -6778,7 +6741,8 @@ def mul(self, res, mat, m):
 def mat_exp(self, n, m):
 	while n>0:
 		if n&1:  
-			self.mul(self.res, self.mat, m) # Multiplying the result matrix with the current matrix
+			# Multiplying the result matrix with the current matrix
+			self.mul(self.res, self.mat, m) 
 		self.mul(self.mat,self.mat,m) # Squaring the current matrix
 		n //= 2 # Halving the power of the matrix
 ```
@@ -9757,6 +9721,40 @@ def buildTree(preorder: List[int], inorder: List[int]):
 ```
 
 同理，如果是后序遍历的结果，则根节点一开始位于最右侧，并且需要先构造右子树
+
+
+
+### 二叉树的底部视图
+
+[Bottom View of a Binary Tree - GeeksforGeeks](https://www.geeksforgeeks.org/bottom-view-binary-tree/)
+
+二叉树的底部视图指从底部向上看能看到的节点，这里需要考虑每个节点的水平位置，水平位置相等并且处于同一层的选择层次遍历时后遍历到的节点
+
+使用层次遍历，遍历时记住每个节点对应的水平位置，即左子树是根节点的水平位置减1，右子树则是加1。
+
+```python
+def bottomView(root):
+	from collections import deque, defaultdict
+	queue = deque()
+	# 根节点的水平位置为0
+	queue.append((root, 0))
+	
+	hd_map = defaultdict(int)        
+	while queue:
+		node, hd = queue.popleft()
+		
+		# 更新hd对应的值
+		hd_map[hd] = node.data
+		
+		if node.left is not None:
+			queue.append((node.left, hd-1))
+		if node.right is not None:
+			queue.append((node.right, hd+1))
+	
+	res = [hd_map[hd] for hd in sorted(hd_map)]
+	return res
+```
+
 
 
 ### 二叉树展开为链表
